--- a/1주차/김윤경.md
+++ b/1주차/김윤경.md
@@ -1,1 +1,109 @@
+# 오브젝트와 의존관계
+## 1.1 초난감 DAO
+- Data Access Object, DB를 사용해 데이터를 조회하거나 조작하는 기능을 전담하도록 만든 오브젝트
 
+- 자바빈
+  - 원래 비주얼 툴에서 조작 가능한 컴포넌트.
+  - 디폴트 생성자 :  자바빈은 파라미터가 없는 디폴트 생성자를 갖고 있어야 한다. 왜? 툴이나 프레임워크에서 리플렉션을 이용해 오브젝트를 생성하기 때문
+  - 프로퍼티 : 자바빈이 노출하는 이름을 가진 속성. 프로퍼티는 setter, getter를 이용해 수정 및 조회 가능
+
+
+## 1.2 DAO의 분리
+관심이 같은 것끼리는 하나의 객체 안으로 또는 친한 객체로 모이게 하고
+관심이 다른 것은 가능한 한 따로 떨어져서 서로 영향을 주지 않도록 분리하는 것
+
+## 추출
+- 리펙토링  - 기존의 코드를 외부 동작방식에는 변화 없이 내부 구조를 변경해서 재구성하는 작업.
+- 코드 내부의 설계가 개선되서 코드 이해↑, 변화에 효율적 대응 가능. 
+- 코드의 품질은 높아지고 유지보수 용이
+
+
+## 디자인 패턴
+- 소프트웨어 설계 시 특정 상황에서 자주 만나는 문제를 해결하기 위해 사용할 수 있는 재사용 가능한 솔루션.
+
+## 템플릿 메소드 패턴
+- 상속을 통해 슈퍼클래스의 기능을 확잘 할 때 사용하는 가장 대표적인 방법
+- 변하지 않는 기능 → 슈퍼클래스에 만듦, 자주 변경되거나 확장할 기능 → 서브클래스에서 만듦
+
+## 팩토리 메소드 패턴
+- 상속을 통해 기능을 확장하는 패턴(템플릿 메소드와 유사)
+
+## 1.3 DAO 확장
+- 클래스의 분리
+- 인터페이스의 도입
+- 관계 설정 책임의 분리
+- 원칙과 패턴
+   - 개방 폐쇄 원칙 (SOLD 중 하나)
+       - 객체지향 설계 원칙
+            - SPR
+            - OCP
+            - LSP
+            - ISP
+            - DIP
+- 높은 응집도, 낮은 결합도
+  - 높은 응집도 : 변경이 일어날 때 모듈의 많은 부분이 함께 바뀌는 것
+  - 낮은 결합도 : 필요최소한 방법만 간접적인 형태로 제공하고, 나머지는 서로 독립적이게 → 변화에 대응하는 속도 높아지고 구성이 깔끔해짐. 확장하기에도 매우 유용
+ 
+- 전력 패턴
+
+## 1.4 제어의 역전 IoC
+- 제어의 역전 : 프로그램의 제어 흐름 구조가 뒤바뀌는 것. ex) 프레임워크
+- 오브젝트가 자신이 사용할 오브젝트를 스스로 선택하지않음. 모든 제어 권한을 자신이 아닌 다른 대상에게 위임하기 때문
+
+- 팩토리
+  - 객체의 생성 방법을 결정하고 그렇게 만들어진 오브젝트를 돌려주는 일을 함
+
+## 1.5 스프링의 IoC
+- 빈 : 스프링이 제어권을 가지고 직접 만들고 관계를 부여하는 오브젝트
+- 빈 팩토리 : 빈의 생성과 관계 설정 제어를 담당하는 IoC 오브젝트
+- +) 애플리케이션 컨텍스트 : IoC 방식을 따라 만들어진 일종의 빈 팩토리. 뱔도의 정보를 참고해서 빈의 생성, 관계설정 등의 제어 작업 총괄
+    - 애플리케이션 컨텍스트의 장점?
+       - 클라이언트는 구체적인 패고리 클래스를 알 필요 없음
+       - 애플리케이션은 종합 IoC 서비스를 제공해줌
+       - 빈을 검색하는 다양한 방법 제공
+
+## 1.6 싱글톤 레지스트리 & 오브젝트 스코프
+- 동일성 비교 : 두 개의 오브젝트가 완전이 동일한 오브젝트 (' == ' 연산자)
+- 동등성 비교 : 동일한 정보를 담고있는 오브젝트 (equals() 메소드 이용해 비교)
+
+- 싱글톤 패턴 : GoF 중 하나. 어떤 클래스를 애플리케이션 내에서 제한된 인스턴스 개수, 이름처럼 주로 하나만 존재하도록 강제하는 패턴. 하나만 만들어지는 클래스의 오브젝트는 애플리케이션 내에서 전역적으로 접근 가능 (but 단일 오브젝트만 존재해야함)
+- 싱글톤 패턴의 한계점
+  - 생성자를 private으로 제한
+  - 테스트 하기 힘듦
+  - 서버 환경에서는 싱글톤이 하나만 만들어지는 것을 보장하지 못함
+  - 싱글톤 사용은 전역 상태를 만들수 있음 → 아무객체나 접근, 수정, 공유 가능해서 권장x
+
+- 스프링 빈의 스코프 : 스프링이 관리하는 오브젝트. 빈이 생성되고 적용되는 범위
+
+  ## 1.7 의존관계 주입 DI
+  - 클래스 모델이나 코드에는 런타임 시점의 의존관계가 드러나지 않음. 인터페이스에만 의존하고 있어야함
+  - 런타임 시점의 의존관계는 커네이너나 팩토리 같은 제 3의 존재가 결정
+  - 의존관계는 사용할 오브젝트에 대한 레퍼런스를 외부에서 제공해줌으로써 만들어짐
+
+  - DI 받는다 : 외부로부터의 주입. 다이내믹하게 구현 클래스를 결정해서 제공받응ㄹ 수 있도록 인터페이스 타입의 파라미터를 통해 이루어져야 함.
+ 
+  - 메소드를 이용한 의존관계 주입
+     - 수정자 메소드를 이용한 주입
+     - 일반 메소드를 이용한 주입
+
+  ## 1.8 XML을 이용한 설정
+  - 자바 클래스를 이용하는 것 외에, 다양한 방법을 통해 DI 의존관계 설정정보를 만들수 있음.
+  - XML은 단순한 텍스트 파일. 다루기 쉽고, 이해하기 쉬움. 컴파일과 같은 별도의 빌드 작업이 없음.
+ 
+  +) 메소드의 리턴 타입을 class 애트리뷰트에 사용하지 않아야함. 리턴하는 타입을 지정하지 않아도 됨.
+  - DataSource 인터페이스로 변환
+    - DataSource 인터페이스 적용
+    - 자바 코드 설정
+    - XML 설정
+  - 프로퍼티 값 주입
+  - value 값 자동변환
+  
+
+
+
+
+
+
+
+
+     
