--- a/3주차/김윤경.md
+++ b/3주차/김윤경.md
@@ -45,8 +45,78 @@
 
 <img width="734" height="267" alt="image" src="https://github.com/user-attachments/assets/b4550f01-7156-4ddd-ae47-d3a344b3424b" />
 
+<DI 적용을 위한 클라이언트/컨텍스트 분리>
+- Context가 어떤 전략을 사용하게 할 것인가는 Context를 사용하는 앞단의 client가 결정하는게 일반적임
+- Client가 구체적인 전략의 하나를 선택하고 오브젝트로 만들어서 Context에 전달 -> Context는 전달받은 그 strategy 구현 클래스의 오브젝트를 사용함.
 
-수정중입니다~~~~
+- 컨텍스트에 해당하는 부분을 변도의 메소드로 독립
+  - 클라이언트는 전략 클래스의 오브젝트를 컨텍스트의 메소드를 호출하며 전달해야 한다
+     = 컨텍스트사 어떤 전략(로직)을 쓸지 모르는 상태에서, 실행할 때 외부에서 전략 객체를 넘겨주는 것.
+    -> 전략패턴은 1. 컨텍스트 2. 전략 인터페이스 3. 구체 전략 클래스 총 3가지 구성요소로 이루어져 있음.
+
+
+- 전략 인터페이스 
+ ```
+interface Engine {
+    void start();
+}
+```
+
+
+- 구체 전략들
+```
+class GasEngine implements Engine {
+    public void start() {
+        System.out.println("가솔린 엔진 시동!");
+    }
+}
+
+class ElectricEngine implements Engine {
+    public void start() {
+        System.out.println("전기 엔진 시동!");
+    }
+}
+```
+
+- 컨텍스트
+```
+class Car {
+    public void run(Engine engine) {   //  전략을 “메서드 인자로 전달받음”
+        engine.start();
+    }
+}
+```
+
+- 실행
+```
+public class Main {
+    public static void main(String[] args) {
+        Car car = new Car();
+
+        car.run(new GasEngine());       // 가솔린 전략 사용
+        car.run(new ElectricEngine());  // 전기 전략으로 교체
+    }
+}
+```
+
+
+
+컨텍스트(Car)가 어떤 전략(Engine)을 쓸지 모르기 때문에, 실행할 때 외부에서 주입해야 한다- 라는 뜻.
+
+<마이크로 DI>
+- DI의 장점을 단순화해서 IoC 컨테이너의 도움 없이 코드 내에서 적용한 경우. 코드에 의한 DI라는 의미로 수동 DI라고 부를 수도 있다.
+
+- 불만)
+  - 1. DAO 메소드 마다 새로운 StatementStrategy 구현 클래스를 만들어야함. -> 클래스가 많아짐
+  - 2. DAO 메소드에서 StatementStrategy에 전달할 User와 같은 부가적인 정보가 있는 경우, 이를 위해 오브젝트를 전달받는 생성자와 이를 저장해 둘 인스턴스 변수를 만들어야함
+- 해결방법) ?
+
+<로컬 클래스>
+
+
+
+
+
 
 
 
