--- a/3주차/김윤경.md
+++ b/3주차/김윤경.md
@@ -112,11 +112,100 @@ public class Main {
 - 해결방법) ?
 
 <로컬 클래스>
+- 로컬클래스의 장점
+  - 캡슐화(Encapsulation) 강화 : 로컬 클래스는 선언된 메서드 내부에서만 접근 가능. 따라서 외부에서 쓸 일이 없는 클래스를 감추어 코드의 가독성과 보안성을 높일 수 있음.
+  - 메서드 내의 변수나 상태에 쉽게 접근 가능 : 로컬 클래스는 자신이 선언된 메서드의 final 또는 effectively final 변수를 사용할 수 있음. 즉, 메서드 내부의 값을 간단히 가져다 쓸 수 있어, 메서드 관련 로직을 묶기에 좋음.
+  - 코드 구조 단순화 : 굳이 파일 밖에 클래스를 새로 만들지 않아도 되니까, 짧고 한정적인 역할을 하는 클래스를 만들 때 편리함.
+  - 익명 클래스보다 조금 더 명확한 구조 : 이름이 있는 클래스라 디버깅이나 재사용(같은 메서드 안에서)은 익명 클래스보다 쉬움.
+ 
+<익명 내부 클래스>
+ - 익명 내부 클래스는 이름을 갖지 않는 클래스. 클래스 선언과 오브젝트 생성이 결합된 형태로 만들어지며, 상속할 클래스나 구현할 인터페이스를 생성자 대신 사용한다. 클래스를 재사용할 필요가 없고, 구현한 인터페이스 타입으로만 사용할 경우에 유용하다.
+
+
+## 3.4 컨텍스트와 DI
+
+- 1. 컨텍스트(Context)
+   -스프링 컨테이너라고도 부르는 ApplicationContext는 객체(빈, Bean)의 생성, 초기화, 관리, 소멸을 담당. 즉, 객체를 직접 new로 만드는 대신, 컨텍스트가 대신 생성하고 주입해주는 환경. -> 개발자는 객체 간의 의존 관계를 직접 관리하지 않아도 됩니다.
+
+- 2. DI (Dependency Injection, 의존성 주입)
+  - 객체가 필요로 하는 다른 객체(의존성)를 직접 생성하지 않고 외부에서 주입받는 방식. 이로 인해 결합도가 낮아지고, 테스트나 유지보수가 쉬워집니다.
+
+- 3. 클래스 분리
+  - **단일 책임 원칙(SRP)**에 따라, 각 클래스는 하나의 역할만 담당
+    
+- 4. 빈(Bean) 의존 관계 변경
+  - 스프링에서는 설정 파일(@Configuration 클래스나 applicationContext.xml)을 통해 의존 관계를 변경할 수 있음. 코드를 수정하지 않고도, 설정만 바꾸면 다른 구현체로 교체 가능하죠.
+ 
+<인터페이스를 사용해서 클래스를 자유롭게 변경할 수 있게 하지는 않았지만,  JdbcContext를 UserDao와 DI구조로 만들어야할 이유?>
+ - 1. JdbcContext가 스프링 컨테이너의 싱글톤 레지스트리에서 관리되는 싱글톤 빈이 되기 때문
+ - 2. JdbcContext가 DI를 통해 다른 빈에 의존하고 있기 때문
+  
+<코드를 이용하는 수동 DI>
+- 수동 DI (Manual Dependency Injection)”는 스프링 같은 프레임워크의 자동 주입 없이, 개발자가 직접 객체를 생성하고 주입하는 방식 -> 스프링이 대신 해주는 걸 직접 코드로 하는 것
+  - 코드 레벨에서 객체 생성과 주입 구조를 명확히 볼 수 있다.
+  - 스프링 같은 컨테이너를 몰라도 DI 개념 자체를 이해하는 데 매우 도움이 된다.
+  - 테스트 환경에서 원하는 구현체로 쉽게 교체 가능하다.
+  - but! JdbcContext를 여러 오브젝트가 사용하더라도 싱글톤으로 만들 수 없고, DI작업을 위한 부가적인 코드가 필요하다는 단점이 있음.
+ 
+ ## 3.5 템플릿과 콜백
+ - 템플릿 : **변하지 않는 전체 구조나 흐름(공통 코드)**을 정의하는 부분. 즉, “이건 항상 이렇게 돌아간다”라는 고정된 틀을 잡는 역할. 예를 들어, try/catch, 자원 닫기, 예외 처리 같은 반복되는 부분을 템플릿이 담당.
+
+ - 콜백 : **변하는 부분(구체적인 동작)**을 외부에서 주입받아 실행하는 함수나 객체. 즉, “상황에 따라 다르게 해야 하는 코드”를 템플릿이 대신 호출해주는 구조.
+-  -> 얘네 왜 쓰는데? -> 복되는 코드(템플릿)는 재사용하고, 바뀌는 부분(콜백)은 자유롭게 바꾸기 위해.
+
+ - <동작원리>
+  - : 템플릿이 “전체 흐름”을 잡고, 콜백이 “특정 시점에 실행될 구체적인 동작”을 전달받아 실행한다.
+   - 1. 개발자가 템플릿에게 콜백을 전달 -> “이때 이 동작을 해줘!” 라고 요청
+   - 2. 템플릿이 내부에서 정해진 순서로 흐름을 실행
+       - 공통 로직 수행 (자원 연결, 예외 처리 등)
+       - 필요한 시점에 콜백 호출 (callback.doSomething())
+       - 자원 정리, 종료 등 마무리 처리
+   - 3. 결과를 반환하거나 로그를 남김
+
+- <콜백의 재활용>
+  - 한 번 정의된 콜백은 다양한 템플릿 실행에 재활용 가능
+    - 공통 로직을 한 번만 정의
+    - 여러 템플릿 실행에 재사용 가능
+    - 테스트, 유지보수, 확장 용이
+   
+- <콜백의 분리와 재활용>
+  - 콜백은 템플릿 안에 감춰두지 말고, 외부 클래스로 분리
+    - 템플릿은 **흐름 제어(공통 구조)**만 담당
+    - 콜백은 구체적 실행 로직만 담당
+    - -> 템플릿과 콜백의 결합도가 낮아지고, 재사용성↑, 확장성↑
+      
+- <콜백과 템플릿의 결합>
+  - 템플릿이 실행 흐름 중 특정 시점에서 콜백을 “호출(callback)”한다
+    - 사용자 → 템플릿 실행 요청→ 템플릿 내부에서 콜백 호출 → 콜백이 특정 동작 수행 → 템플릿이 흐름 마무리
+   
+- <템플릿/콜백의 응용>
+  - 템플릿은 “흐름”을 고정하고, 콜백만 교체해서 다양한 작업 수행 가능.
+
+- <중복의 제거와 템플릿/콜백 설계>
+  - try/catch, 자원 정리, 반복 흐름이 매번 중복되는게 문제.
+     - 템플릿이 그 중복된 흐름을 하나의 공통 구조로 캡슐화.
+     - 콜백이 “변하는 부분”만 담당.
+     - -> 코드 중복 제거
+     - -> 유지보수 시 한 곳만 수정하면 전체 흐름 변경 가능
+  - 좋은 콜백의 설계
+     - 작고 명확한 역할 — 한 가지 일만 한다.
+     - 상태에 의존하지 않는다 — 외부 상태에 덜 의존해야 재사용 가능.
+     - 템플릿과 느슨하게 결합된다 — 템플릿 내부 구조에 종속되지 않는다.
+     - 인터페이스 기반 설계 — 인터페이스로 정의해 다양한 구현체 가능.
+      
+- <템플릿/콜백의 재설계>
+- <img width="802" height="437" alt="image" src="https://github.com/user-attachments/assets/d4d814d9-826a-4c10-83bf-182fe0e62070" />
 
 
 
 
 
+
+
+ 
+    
+ 
+    
 
 
 
