--- a/3주차/김윤경.md
+++ b/3주차/김윤경.md
@@ -196,6 +196,27 @@ public class Main {
 - <템플릿/콜백의 재설계>
 - <img width="802" height="437" alt="image" src="https://github.com/user-attachments/assets/d4d814d9-826a-4c10-83bf-182fe0e62070" />
 
+## 스프링의 JdbcTemplate
+
+- <update()>
+  - 데이터 변경(INSERT, UPDATE, DELETE) SQL 실행용 메서드
+  - 동작원리
+    - 템플릿이 Connection, PreparedStatement 생성 -> SQL 실행 (콜백 내부에서) -> 영향을 받은 행(row) 개수 반환
+- <queryForInt()>
+  - 과거 메서드, 지금은 queryForObject로 대체됨)
+  - 단일 정수값(카운트 등)을 반환할 때 사용
+  - 동작원리
+     - 템플릿이 SQL 실행 -> 결과셋의 첫 번째 컬럼 값을 정수형으로 반환 -> 내부적으로 ResultSetExtractor 콜백 사용
+- <queryForObject()>
+   - 단일 객체 한 개 반환 (1 row, 1 object)
+   - 동작원리
+      - 템플릿이 SQL 실행 -> 결과셋의 첫 번째 컬럼 값을 정수형으로 반환 -> 내부적으로 ResultSetExtractor 콜백 사용
+      - 결과가 0개면 EmptyResultDataAccessException 발생,
+      - 2개 이상이면 IncorrectResultSizeDataAccessException 발생
+- <query()>
+  - 여러 행을 조회할 때 사용
+  - 동작원리
+     - 템플릿이 SQL 실행 -> 결과셋을 한 줄씩 RowMapper 콜백에 전달 -> 매핑된 객체들을 리스트로 반환
 
 
 
