--- a/5주차/김윤경.md
+++ b/5주차/김윤경.md
@@ -1,1 +1,36 @@
+## 4.1 사라진 SQKException
 
+- 예외를 처리할 때 반드시 지켜야 하는것? -> 모든 예외는 적절하게 복구되든지 아니면 작업을 중단시키고 운영자 또는 개발자에게 분명하게 통보돼야 한다.
+
+- SQLException이 발생하는 이유
+1. SQL에 문법 에러가 생김
+2. DB에서 처리할 수 없을 정도로 데이터 액세스 로직에 심각한 버그가 있음
+3. 서버가 죽음
+4. 네트워크가 끊김 등
+
+- throws
+  API 등에서 발생하는 예외를 일일이 catch하기도 귀찮고, 큰 필요도 없고, 매번 정확하게 예외 이름을 적어서 선언하기 번거로움
+  -> throws Exception이라는 모든 예외를 무조건 던져버리는 선언을 모든 메소드에 기계적으로 넣어버림
+  이렇게 생긴 문제점 -> 그런 메소드 선언에서는 의미있는 정보를 얻을 수 없음.
+  -> 무엇인가 실행 중에 예외적인 상황이 발생할 수 있다는 것인지, 그냥 습관적으로 복사해서 붙여놓은 것인지 알수가 없기 때문
+
+
+- 예외의 종류와 특징
+  - throw를 통해 발생시킬 수 있는 예외
+    1. Error
+        - 시스템에 뭔가 비정상 적인 상황이 발생했을 경우에 사용된다.
+        - 주로 자바 VM에서 발생시키는 것이고 애플리케이션 코드에서 잡으려고 하면 안된다.
+        - OutOfMemoryError나 ThreadDeath같은 에러는 catch 블록으로 잡아봤자 아무런 대응 방법이 없다
+          -> 개발자 잘못이 아니라, VM 내부에서 시스템적으로 뭔가 잘못됐기 때문이다.
+        - 따라서 시스템 레벨에서 특별한 작업을 하는게 아니라면 애플리케이션에서는 이런 에러에 대한 처리는 신경쓰지 않아도 된다.
+    2. Exception과 체크예외
+       - 개발자들이 만든 애플리케이션 코드의 작업 중에 예외상황이 발생했을 경우에 사용된다.
+       - Exception클래스는
+       - 1. 체크예외 -> Exception클래스의 서브클래스이면서 RuntimeException클래스를 상속하지 않은 것.
+         2. 언체크 예외 -> RuntimeException을 상속한 클래스
+       <img width="687" height="351" alt="{456FF913-86C1-447B-818C-158CC3AAE588}" src="https://github.com/user-attachments/assets/b749bc78-d5a0-4272-97ce-3f9cec551387" />
+       - 일반적인 예외는 Exception 클래스의 서브클래스 중에서 RuntimeException을 상속하지 않은 것만을 말하는 체크예외임.
+       - 체크 예외가 발생할 수 있는 메소드를 사용할 경우, 반드시 예외를 처리하는 코드를 함께 작성해야 한다.
+       - 사용할 메소드가 체크 예외를 던진다면 이걸 catch문으로 잡던지, 다시 throws를 정의해서 메소드 밖으로 던져야 한다. 안하면? 컴파일 에러가 뜸
+    3. Runtime Exception과 언체크/런타임 예외
+       - 
