--- a/5주차/김윤경.md
+++ b/5주차/김윤경.md
@@ -32,5 +32,21 @@
        - 일반적인 예외는 Exception 클래스의 서브클래스 중에서 RuntimeException을 상속하지 않은 것만을 말하는 체크예외임.
        - 체크 예외가 발생할 수 있는 메소드를 사용할 경우, 반드시 예외를 처리하는 코드를 함께 작성해야 한다.
        - 사용할 메소드가 체크 예외를 던진다면 이걸 catch문으로 잡던지, 다시 throws를 정의해서 메소드 밖으로 던져야 한다. 안하면? 컴파일 에러가 뜸
+         
     3. Runtime Exception과 언체크/런타임 예외
-       - 
+       - 명시적인 예외처리를 강제하지 않기때문에 언체크 예외라고 불림. 개발자가 부주의해서 발생할 수 있는 경우에 생긴 예외
+       - catch문으로 잡거나 throws로 선언하지 않아도 된다.
+       - 런타임 예외는 주로 프로그램의 오류가 있을 때 발생하도록 의도된 것 들이다.
+         - NullPointerException -> 오브젝트를 할당하지 않은 레퍼런스 변수를 사용하려고 시도했을 때 발생
+         - IllegalArgumentException -> 허용되지 않는 값을 사용해서 메소드를 호출할 때 발생
+
+
+     ----
+
+
+
+    - 예외처리 방법
+    1. 예외 복구
+     - 예외상황을 파악하고 문제를 해결해서 정상 상태로 돌려 놓는 것
+     - 예외로 인해 기본작업 흐름이 불가하면 다른 작업 흐름으로 자연스럽게 유도 (but IOException 에러 메시지가 사용자에게 그냥 던져지는건 예외복구가 아님)
+     - 
