--- a/5주차/김윤경.md
+++ b/5주차/김윤경.md
@@ -49,4 +49,17 @@
     1. 예외 복구
      - 예외상황을 파악하고 문제를 해결해서 정상 상태로 돌려 놓는 것
      - 예외로 인해 기본작업 흐름이 불가하면 다른 작업 흐름으로 자연스럽게 유도 (but IOException 에러 메시지가 사용자에게 그냥 던져지는건 예외복구가 아님)
-     - 
+     - 통제 불가능한 외부 요인으로 인해 예외가 발생하면 MAX_RETRY만큼 재시도를 하는 예시 (최대 재시도 횟수 0번)
+    <img width="854" height="475" alt="image" src="https://github.com/user-attachments/assets/b58e1647-1123-436c-ad28-6099fd60ad18" />
+
+
+    2. 예외처리 회피
+       - 예외처리를 자신이 담당하지 않고 자신을 호출한 쪽으로 던져버리는 것.
+       - throws문으로 선언해서 예외가 발생하면 알아서 던져지게 하거나/catch문으로 일단 예외를 잡은 후에 로그를 남기고 다시 예외를 던진다
+       - 예외 처리를 회피하려면 반드시 다른 오브젝트나 메소드가 예외를 대신 처리할 수 있도록 던져줘야함
+       <img width="1039" height="468" alt="{78F40CFB-0830-49F3-A758-5704C9277801}" src="https://github.com/user-attachments/assets/21c7371c-1b5d-4504-80a7-20bd3412932e" />
+
+
+
+
+
