--- a/5주차/김윤경.md
+++ b/5주차/김윤경.md
@@ -58,6 +58,33 @@
        - throws문으로 선언해서 예외가 발생하면 알아서 던져지게 하거나/catch문으로 일단 예외를 잡은 후에 로그를 남기고 다시 예외를 던진다
        - 예외 처리를 회피하려면 반드시 다른 오브젝트나 메소드가 예외를 대신 처리할 수 있도록 던져줘야함
        <img width="1039" height="468" alt="{78F40CFB-0830-49F3-A758-5704C9277801}" src="https://github.com/user-attachments/assets/21c7371c-1b5d-4504-80a7-20bd3412932e" />
+       - 예외를 회피하는 것은 예외를 복구하는 것처럼 의도가 분명해야 함 -> 콜백/템플릿처럼 긴밀한 관계에 있는 다른 오브젝트에게 예외처리 책임을 분명히 지게 하거나, 자신을 사용하는 쪽에서 예외를 다루는 게 최선의 방법이라는 분명한 확신이 있어야 한다.
+      
+   3. 예외전환
+      - 예외 회피와 비슷하게 예외를 복구해서 정상적인 상태로는 만들 수 없기 때문에 예외를 메소드 밖으로 던지는 것
+        (but 예외 회피와 달리, 발생한 예외를 그대로 넘기는게 아니라, 적절한 예외로 전환해서 던진다)
+      - 예외 전환의 목적 1
+         - 내부에서 발생한 예외를 그대로 던지는 것이 그 예외 상황에 대한 적절한 의미를 부여해주지 못하는 경우에 의미를 분명하게 해 줄수 있는 예외로 바꿔주기 위함. ex) API가 바생하는 기술적은 로우레벨을 상황에 적합한 의미를 가진 예외로 변경하는 것.
+
+<img width="1114" height="470" alt="{9DAE97C3-E796-495B-A3A3-BA66B7670DE4}" src="https://github.com/user-attachments/assets/f8a57a3c-60c8-4d92-8fd3-fd9bab82ee91" />
+        -> 보통, 전환하는 예외(DuplicateUserIdException)에 원래 발생한 예외(SQLException)로 만드는 것이 좋다. 
+
+        - 중첩 예외는 새로운 예외를 만들면서 생성자나 initCause()메소드로 근본 원인이 되는 예외를 넣어주면 된다.
+      <img width="860" height="364" alt="{54D16091-EEEF-441B-B71F-DF0F1FD2EF1F}" src="https://github.com/user-attachments/assets/b9fd1895-92b7-49b4-bd21-69c9c0e2eb5f" />
+
+
+
+      - 예외 전환의 목적 2
+        - 예외를 처라하기 쉽고 단순하게 만들기 위함 -> 포장
+        - 중첩예외를 이용해 새로운 예외를 만들고 원인이 되는 예외를 내부에 담아서 던지는 방식은 같음. but 의미를 명확하게 하려고 다른 예외로 전환하는 것은 아님. 주로 예외처리를 강제하는 체크예외를 언체크 예외인 런타임 예외로 바꾸는 경우에 사용함.
+
+        <img width="978" height="359" alt="{4228A02D-5BA7-4983-9B7A-04E683130FB1}" src="https://github.com/user-attachments/assets/2509825e-2d4d-4628-b0d4-9620e5241032" />
+
+        EJBException은 RUuntimeException 클래스를 상속한 런타임 예외임. 이렇게 런타임 예외로 만들어서 전달하면 EJB는 이를 시스템 익셉션으로 익식하고 트랜잭션을 자동으로 롤백해줌.
+
+- 일반적으로 체크 예외를 계속 throws를 사용해 넘기는건 무의미함. 메소드 선언은 지저분해지고 아무런 장점이 없음.
+- 어짜피 복구 불가능예외라면 가능한 한 빨리 런타임 예외로 포장해 던지게 해서 다른 계층의 메소드를 작성할 때 불필요한 throw 선언이 들어가지 않도록 해줘야함. + 예외처리 서비스 등을 이용해 자세한 로그 남기기 + 관리자에게 메일 등으로 통보 + 사용자에겐 안내 메시지지 
+        
 
 
 
