--- a/5주차/김윤경.md
+++ b/5주차/김윤경.md
@@ -63,27 +63,119 @@
    3. 예외전환
       - 예외 회피와 비슷하게 예외를 복구해서 정상적인 상태로는 만들 수 없기 때문에 예외를 메소드 밖으로 던지는 것
         (but 예외 회피와 달리, 발생한 예외를 그대로 넘기는게 아니라, 적절한 예외로 전환해서 던진다)
-      - 예외 전환의 목적 1
+
+
+
+  - 예외 전환의 목적 1
          - 내부에서 발생한 예외를 그대로 던지는 것이 그 예외 상황에 대한 적절한 의미를 부여해주지 못하는 경우에 의미를 분명하게 해 줄수 있는 예외로 바꿔주기 위함. ex) API가 바생하는 기술적은 로우레벨을 상황에 적합한 의미를 가진 예외로 변경하는 것.
 
 <img width="1114" height="470" alt="{9DAE97C3-E796-495B-A3A3-BA66B7670DE4}" src="https://github.com/user-attachments/assets/f8a57a3c-60c8-4d92-8fd3-fd9bab82ee91" />
-        -> 보통, 전환하는 예외(DuplicateUserIdException)에 원래 발생한 예외(SQLException)로 만드는 것이 좋다. 
+-> 보통, 전환하는 예외(DuplicateUserIdException)에 원래 발생한 예외(SQLException)로 만드는 것이 좋다. 
+- 중첩 예외는 새로운 예외를 만들면서 생성자나 initCause()메소드로 근본 원인이 되는 예외를 넣어주면 된다.
 
-        - 중첩 예외는 새로운 예외를 만들면서 생성자나 initCause()메소드로 근본 원인이 되는 예외를 넣어주면 된다.
-      <img width="860" height="364" alt="{54D16091-EEEF-441B-B71F-DF0F1FD2EF1F}" src="https://github.com/user-attachments/assets/b9fd1895-92b7-49b4-bd21-69c9c0e2eb5f" />
+<img width="860" height="364" alt="{54D16091-EEEF-441B-B71F-DF0F1FD2EF1F}" src="https://github.com/user-attachments/assets/b9fd1895-92b7-49b4-bd21-69c9c0e2eb5f" />
 
 
+- 예외 전환의 목적 2
+ - 예외를 처라하기 쉽고 단순하게 만들기 위함 -> 포장
+ - - 중첩예외를 이용해 새로운 예외를 만들고 원인이 되는 예외를 내부에 담아서 던지는 방식은 같음. but 의미를 명확하게 하려고 다른 예외로 전환하는 것은 아님. 주로 예외처리를 강제하는 체크예외를 언체크 예외인 런타임 예외로 바꾸는 경우에 사용함.
+  
+<img width="1054" height="349" alt="{CB1B614E-79AB-47CF-8150-5E784E9C7614}" src="https://github.com/user-attachments/assets/90a7ff3a-2a8b-4435-9454-971de0e985dd" />
 
-      - 예외 전환의 목적 2
-        - 예외를 처라하기 쉽고 단순하게 만들기 위함 -> 포장
-        - 중첩예외를 이용해 새로운 예외를 만들고 원인이 되는 예외를 내부에 담아서 던지는 방식은 같음. but 의미를 명확하게 하려고 다른 예외로 전환하는 것은 아님. 주로 예외처리를 강제하는 체크예외를 언체크 예외인 런타임 예외로 바꾸는 경우에 사용함.
 
-        <img width="978" height="359" alt="{4228A02D-5BA7-4983-9B7A-04E683130FB1}" src="https://github.com/user-attachments/assets/2509825e-2d4d-4628-b0d4-9620e5241032" />
-
-        EJBException은 RUuntimeException 클래스를 상속한 런타임 예외임. 이렇게 런타임 예외로 만들어서 전달하면 EJB는 이를 시스템 익셉션으로 익식하고 트랜잭션을 자동으로 롤백해줌.
+EJBException은 RUuntimeException 클래스를 상속한 런타임 예외임. 이렇게 런타임 예외로 만들어서 전달하면 EJB는 이를 시스템 익셉션으로 익식하고 트랜잭션을 자동으로 롤백해줌.
 
 - 일반적으로 체크 예외를 계속 throws를 사용해 넘기는건 무의미함. 메소드 선언은 지저분해지고 아무런 장점이 없음.
-- 어짜피 복구 불가능예외라면 가능한 한 빨리 런타임 예외로 포장해 던지게 해서 다른 계층의 메소드를 작성할 때 불필요한 throw 선언이 들어가지 않도록 해줘야함. + 예외처리 서비스 등을 이용해 자세한 로그 남기기 + 관리자에게 메일 등으로 통보 + 사용자에겐 안내 메시지지 
+- 어짜피 복구 불가능예외라면 가능한 한 빨리 런타임 예외로 포장해 던지게 해서 다른 계층의 메소드를 작성할 때 불필요한 throw 선언이 들어가지 않도록 해줘야함. + 예외처리 서비스 등을 이용해 자세한 로그 남기기 + 관리자에게 메일 등으로 통보 + 사용자에겐 안내 메시지
+
+
+----
+
+
+- 에외처리 전략
+  - add() 메소드의 예외처리
+  - <img width="836" height="382" alt="image" src="https://github.com/user-attachments/assets/accfcd22-25fa-4eaa-b06e-e9f41459c003" />
+
+  -> add()메소드를 사용하는 오브젝트는 SQLException을 처리하기 위해 불필요한 throws 선언을 할 필요 없으 + 필요한 경우 아이디 중복 상황을 처리하기 위해 DuplicatedUserIdException을 이용할 수 있음.
+
+
+- 애플리케이션 예외
+  - 시스템 또는 외부의 예외상황이 원인이 아니라 애플리케이션 자체의 로직에 의해 의도적으로 발생시키고, 반드시 catch해서 무엇인가 조치를 취하도록 요구하는 예외.
+  - 이런 기능을 담은 메소드를 설계하는 방법
+     1. 각각 다른 종류의 리턴값 돌려주기 -> 리턴 값을 일종의 결과 생토를 나타내는 정보로 활용
+     2. 정상적인 흐름을 따르는 코드는 그대로 두고, 예외상황에서는 비즈니스적인 의미를 띤 예외를 던지도록 만들기.
+
+<img width="959" height="412" alt="{C406591B-E7AE-4F9E-9440-7560574DC20B}" src="https://github.com/user-attachments/assets/b0fc90a0-3848-4b29-8d1d-12fcdcccc875" />
+
+
+
+
+----
+
+
+
+- JDBC의 한계
+  - JDBC는 자바를 이요해 DB에 접근하는 방법을 추상화된 API형태로 정의해 놓고, 각 DB업체가 JDBC표준을 따라 만들어진 드라이버를 제공하게 해준다. 내부 구현은 DB마다 다르지만, JDBC의 Connection, statement, ResultSet 등의 표준 인터페이스를 통해 그 기능을 제공해주기 때문에 자바 개발자들은 표준화된 JDBC의 API에만 익숙해지면 DB의 종류에 상관없이 일관된 방법으로 프로그램을 개발 할 수 있음.
+
+  - 비표준 SQL
+    - 대부분의 DB는 표준을 따르지 않는 비표준 문법과 기능 제공
+    - 호환 가능한 표준 SQL만 사용하는 방법, DB별로 별도의 DAO를 만들거나 SQL을 외부에 독립시켜서 DB에 따라 변경해 사용하는 방법이 있음
+   
+
+  - 호환성 없는 SQLException의 DB 에러 정보
+     SQLException의 에러코드를 이용해 중복된 값의 등록이 원인인지 확인.
+
+
+  - DB에러 코드 매핑을 통한 전환
+    <img width="739" height="304" alt="{B2F112C1-51B5-4C8A-A954-46C3CF4CA6E2}" src="https://github.com/user-attachments/assets/4e5fa13b-f2f7-43a6-8124-8cb7b61b4a5c" />
+
+    <img width="873" height="583" alt="{32B15168-D8FF-4F80-833D-F26BE89E114A}" src="https://github.com/user-attachments/assets/9d3a45ba-eedc-4752-8a1f-10fe8d3c4a20" />
+
+
+
+
+
+- DAO 인터페이스와 구현의 분리
+  - DAO를 굳이 따로 만들어서 사용하는 이유?
+    -> 가장 중요한 이유는 데이터 액세스 로직을 담은 코드를 성격이 다른 코드에서 분리해 놓기 위함.
+    ->  분리된 DAO는 전략 패턴을 적용해 구현 방법을 변경ㄹ해서 사용할 수 있게 만들기 위함.
+    
+<img width="521" height="62" alt="image" src="https://github.com/user-attachments/assets/65094ca5-a08b-481a-9b0a-6b66c1dd330f" />
+
+
+- 데이터 액세스 예외 추상화와 DataAccessException 계층구조
+   - ex) JDBC, JDO, JPA, 하이버네이트에 상관없이 데이터 액세스 기술을 부정확하게 사용했을 때는 InvalidDataAccessResourceUsageException예외가 던져임.
+   - JDO, JPA, 하이버네이트처러 오브ㅔㄱ트/엔티티 단위정보를 업데이트 하는 경우에는 낙관적인 락킹이 발생할 수 있다.
+   - 락킹 -> 두명 이사의 사용자가 동시에 조회하고 순차적으로 업데이트를 할 때 뒤늫게 업데이트를 한 것이 먼저 업데이트를 한 것을 덮어쓰지 않도록 막아주는 데 쓸 수 있는 편리한 기능.
+ 
+
+
+- 기술에 독립적인 UserDao만들기
+  - 인터페이스 적용
+ 
+  - <img width="807" height="284" alt="image" src="https://github.com/user-attachments/assets/fb349307-c3a9-4362-ae05-8eb3672de7e9" />
+
+<img width="550" height="61" alt="image" src="https://github.com/user-attachments/assets/7bcff9fd-a33e-4793-afb3-2d067c69f931" />
+
+<img width="818" height="175" alt="image" src="https://github.com/user-attachments/assets/36905c15-bc9c-4286-b7f9-a7fd215144c2" />
+
+  - 테스트 보완
+
+      - <img width="867" height="301" alt="{43DB9F45-B359-4628-9985-792BBA8466FF}" src="https://github.com/user-attachments/assets/afaced5e-5881-4002-aa2b-86804e3f6082" />
+
+
+
+- DataAccessException 활용 시 주의사항
+   - DataAccessException이 기술에 상관없이 어느 정도 추상화된 공통 예외로 변환해주긴 하지만, 근본적인 한계 때문에 완벽x
+ 
+
+
+
+  
+
+
+
+
         
 
 
