--- a/5주차/유찬연.md
+++ b/5주차/유찬연.md
@@ -1,4 +1,5 @@
-<img width="704" height="325" alt="image" src="https://github.com/user-attachments/assets/3b392ce4-920c-4adb-8197-a6cd850ff700" /># 예외
+# 예외
+<img width="704" height="325" alt="image" src="https://github.com/user-attachments/assets/3b392ce4-920c-4adb-8197-a6cd850ff700" />
 
 ## 사라진 SQLException
 
