--- a/6주차/김윤경.md
+++ b/6주차/김윤경.md
@@ -184,6 +184,24 @@ Member member = jdbcClient
   - DataSourceTransactionManager (필수는 아니지만 보통 필요) : JDBC 트랜잭션을 관리하는 스프링 트랜잭션 매니저
 
 
+- OrderService에서 기술 관련 코드 제거
+<img width="645" height="350" alt="image" src="https://github.com/user-attachments/assets/a7e1f51c-6696-4b08-858d-e7eb2ef847d3" />
+- OrderService에서 기술(JPA/JDBC/MyBatis/트랜잭션 등) 관련 코드를 모두 제거하고,
+오직 OrderRepository 인터페이스 같은 추상화에만 의존하도록 변경하는 것이
+‘기술 관련 코드 제거’의 의미이다.
+
+
+-트랜잭션 테스트
+<img width="450" height="187" alt="image" src="https://github.com/user-attachments/assets/d89ae8fd-faef-46a4-a285-dbd4a5392cf7" />
+- 트랜잭션 테스트는 커밋/롤백 여부, 전파 동작, 예외 처리 시 동작을 검증하는 테스트이며,
+스프링에서는 @Transactional, @Rollback, PlatformTransactionManager를 이용해 수행한다.
+
+
+
+
+
+
+
 
 
 
