--- a/6주차/김윤경.md
+++ b/6주차/김윤경.md
@@ -94,7 +94,9 @@ public class OrderService {
 JPA 매핑 정보 = 별도의 클래스나 XML로 분리
 
 - 특정 기술(JPA)에 의존하지 않는 애플리케이션 서비스 만들기
+- 
 <img width="470" height="110" alt="image" src="https://github.com/user-attachments/assets/97f77f5a-bf22-4e95-81a5-8dc51fb3eec0" />
+
 - OrderService가 JPA repository 구현체에 의존하지 않도록, 순수한 OrderRepository 인터페이스로 DIP를 적용하자!
 
   <img width="357" height="132" alt="image" src="https://github.com/user-attachments/assets/3185ef8d-f104-4808-96ea-d77268035192" />
@@ -185,16 +187,128 @@ Member member = jdbcClient
 
 
 - OrderService에서 기술 관련 코드 제거
+- 
 <img width="645" height="350" alt="image" src="https://github.com/user-attachments/assets/a7e1f51c-6696-4b08-858d-e7eb2ef847d3" />
+
 - OrderService에서 기술(JPA/JDBC/MyBatis/트랜잭션 등) 관련 코드를 모두 제거하고,
 오직 OrderRepository 인터페이스 같은 추상화에만 의존하도록 변경하는 것이
 ‘기술 관련 코드 제거’의 의미이다.
 
 
 -트랜잭션 테스트
+
 <img width="450" height="187" alt="image" src="https://github.com/user-attachments/assets/d89ae8fd-faef-46a4-a285-dbd4a5392cf7" />
+
 - 트랜잭션 테스트는 커밋/롤백 여부, 전파 동작, 예외 처리 시 동작을 검증하는 테스트이며,
 스프링에서는 @Transactional, @Rollback, PlatformTransactionManager를 이용해 수행한다.
+
+
+- 데코레이터 패턴이란? : 기존 객체를 수정하지 않고, 그 객체를 '감싸서(wrap)' 새로운 기능을 덧붙이는 패턴.
+<img width="514" height="446" alt="image" src="https://github.com/user-attachments/assets/5afdca88-2be1-4ff1-9961-03fd0546a682" />
+
+````
+           ┌───────────────┐
+           │   Client      │
+           └───────▲───────┘
+                   │
+             (인터페이스)
+                   │
+        ┌──────────┴──────────┐
+        │                     │
+   [ConcreteComponent]   [Decorator]
+    (원본 객체)                 │
+                              │ wraps
+                              ▼
+                       [ConcreteDecorator]
+                (기능을 추가하는 래퍼 객체)
+````
+
+- 어떤 때 사용하냐?
+  - 원본 객체를 변경할 수 없을 때 (라이브러리, 공용 코드)
+  - 여러 “부가 기능”을 조합해서 쓰고 싶을 때
+  - 상속보다 유연한 기능 추가가 필요할 때
+  - AOP, 프록시처럼 실행 전/후 로직을 넣고 싶을 때
+ 
+- 프록시 패턴 : 타깃을 대신해서 존재하며 접근을 제거하거나 보안, 지연, 원격 접속 등의 기능을 제공. 어떤 객체(Real Subject)에 직접 접근하지 않고, 그 앞에 '대리인(Proxy)'을 두어서 접근을 제어하는 패턴.
+  <img width="379" height="332" alt="image" src="https://github.com/user-attachments/assets/df3bb381-ac6c-49f4-8703-f76e4695666c" />
+  
+- 프록시 패턴을 쓰는 이유?
+  - 원본 객체의 접근 제어
+  - 호출 전/후에 부가 기능 넣기
+  - 실제 객체를 감추기
+  - 객체 생성 비용이 비쌀 때 지연 로딩(Lazy Loading)
+  - 보안, 로그, 트랜잭션, 캐싱
+
+<img width="542" height="135" alt="image" src="https://github.com/user-attachments/assets/635c0fad-5789-4bf6-8b19-fc7f1f5a8a61" />
+
+
+- 트랜젝선 프록시
+
+<img width="556" height="476" alt="image" src="https://github.com/user-attachments/assets/917f3c87-e511-4cf5-b18f-6f8db56ac470" />
+
+
+<img width="654" height="327" alt="image" src="https://github.com/user-attachments/assets/1564c31a-fce4-435d-8836-453b92764ed4" />
+
+<img width="671" height="318" alt="image" src="https://github.com/user-attachments/assets/dd4f97c1-d750-44d6-b6ff-16da4ce43fc2" />
+
+<img width="663" height="362" alt="image" src="https://github.com/user-attachments/assets/d95cb11f-1f83-4840-a377-cfd641031fd5" />
+
+
+- 다이어그램의 의미(핵심 정리)
+  - 클라이언트는 OrderService 인터페이스만 의존한다
+  - 실제로 주입되는 객체는 OrderServiceImpl이 아니라 OrderServiceTxProxy
+  - Proxy가 내부에서 **타깃(OrderServiceImpl)**을 실행
+  - Proxy가 트랜잭션 처리
+  - 서비스는 “도메인 로직만” 처리
+- 이것이 트랜잭션 프록시의 기반 구조
+- 스프링에서 @Transactional을 쓰면 이 구조가 AOP로 자동 생성되는 것!
+
+
+- 트랜잭션 프록시 적용
+
+  <img width="471" height="253" alt="image" src="https://github.com/user-attachments/assets/448d01a5-1fc4-4ab4-97bf-fc6f77dd1e27" />
+
+  <img width="545" height="197" alt="image" src="https://github.com/user-attachments/assets/387c2bd0-56a6-4102-b6fb-8784e8e8d81a" />
+  
+  <img width="619" height="261" alt="image" src="https://github.com/user-attachments/assets/5131d0d2-d36a-4524-b192-f8752574713d" />
+
+- 왜 트랜잭션 프록시를 적용하는걸까?
+  - 단일 책임 원칙(SRP) 지키기 -> OrderService는 “주문 처리”만 집중. 트랜잭션과 같은 기술 로직은 프록시가 담당
+  - OCP(Open-Closed Principle) 지키기 -> 기존 OrderService 코드는 수정 필요 없음. 트랜잭션 기능을 추가할 때 프록시만 끼워 넣으면 됨
+  - AOP 구조의 기본 원리 -> 스프링의 @Transactional이 내부적으로 바로 이런 프록시 패턴 사용함
+
+
+- 스프링의 프록시 AOP
+-
+````
+public void external() {
+    internal(); // ← 여기서 AOP가 적용 안 됨!!
+}
+
+@Transactional
+public void internal() { ... }
+````
+- 프록시를 통해 호출해야 AOP가 실행되는데, 내부 메서드 호출은 프록시를 거치지 않고 자기 자신을 직접 호출함. 그래서 @Transactional, @Cacheable 등이 내부 호출에서 적용 안 되는 문제가 생김.
+
+- 프록시 대상만 적용 → private, final 메서드 AOP 불가
+  - 프록시 AOP는 public 메서드만 적용된다.
+  - private 메서드 → 프록시가 접근 불가
+  - final 클래스/메서드 → CGLIB이 상속할 수 없음
+  - static 메서드 → 인스턴스 기반이 아니라 프록시 불가
+  - 즉 @Transactional을 private 메서드에 걸어도 동작 안 함.
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
