--- a/8주차/김윤경.md
+++ b/8주차/김윤경.md
@@ -1,1 +1,69 @@
+# 애플리케이션 아키텍쳐
+- 아키텍처 : 어떤 경계 안에 있는 내부 구성요소들이 어떤 책임을 갖고있고, 어떤 방식으로 서로 관계를 맺고 동작하는지를 규정하는 것.
+- 단순히 정적인 구조를 나타내는 것으로만 생각하기 쉽지만 실제로 그 구조에서 일어나는 동적인 행위와 깊은 관계가 있음.
 
+## 9.3.1 계층형 아키텍쳐
+- 성격이 다른 모듈이 강하게 결합되어 한 곳에 모여있으면 한 가지 이유로 변경이 일어날때 그와 관계없는 요소도 함께 영향을 받게 됌.
+- 따라서 불필요한 부분까지 변경이 일어나고 그로 인해 작업은 더뎌지고 오류가 발생할 가능성이 높아짐 + 어느 부분을 수정해야할지 파악하기 쉽지않음
+- 따라서 인터페이스와 같은 유연한 경계를 만들어두고 분리하거나 모아주는 작업이 필요함.
+
+### 아키텍처와 SoC
+- 애플리케이션을 구성하는 오브젝트들을 비슷한 성격과 책음을 가진 것들끼리 묶을 수 있다. 데이터 액세스 로직을 담당하는 DAO들은 하나의 단위로 생각해보자면 어떤 DAO든 비슷한 성격을 띠고 유사한 방식으로 다른 오브젝트와 관계를 갖는다.
+- 비즈니스 로직을 구현해놓은 비즈니스 서비스 오브젝트들도 같은 성격으로 묶을 수 있다. 서비스 오브젝트들은 특정 기술과 환경에 종속되지 않으면서 도메인의 업무에는 밀접하게 관련을 갖고 있는 POJO로 만들어진다. 주로 DAO를 이용해 정보의 저장과 검색 등을 하고 DB의 엔티티 모델과 유사한 도메인 오브젝트를 이용해 데이터를 저장하고 가공하고 주고 받는다.
+- 웹을 처리하는 코드 또한 독자적인 성격으로 분류가 가능한데, 서블릿 컨테이너로부터 받은 사용자의 요청정보를 해석해서 그것을 POJO기반의 서비스 오브젝트에 전달해주고, 결과를 받아서 다시 웹 사용자 인터페이스에 표시 가능한 형태로 변환해주는 일을 한다. 
+
+-> 애플리케이션의 오브젝트들은 다시 유사한 성격을 띤 그룹으로 나눌 수가 있는데 이렇게 나뉘어 있지 않다면 어떻게 될까?
+- DB에서 정보를 어떻게 가져오는지에 대한 로직을 담은 SQLrhk, JDBC코드와 HTML 태그 사이에 읽어오느정보를 넣는 코드가 함께 존재할 수 있다.
+- 이러면 성격과 책임이 분명ㅎ ㅣ다른 것들이 한데 모여 얽혀 있게 되고 문제가 발생하게 된다.
+-> 그래서 성격이 다른 것은 아키텍쳐 ㅔ벨에서 분리해주는게 좋다. 이렇게 분리된 각 오브젝트는 독자적으로 개발과 테스트가 가능해서 개발과 변경 작업이 모두 빨라질 수 있다. + 구현 방법이나 세부 로직은 서로 영향을 주지 않고 변경될 수 있을 만큼 유연하다.
+- [계층형 아키텍처] : 책임과 성격이 다른 것을 크게 그룹으로 만들어 분리해두는 것. 계층이라는 의미를 가진 영어단어닌 티어를 써서 '멀티 티어 아키텍처'라고도 하고, 웹 기반의 엔터프라이즈 애플리케이션은 일반적으로 세 개의 계층을 갖는다고 해서 '3계층 애플리케이션'이라고도 한다.
+
+### 3계층 아키텍처와 수직 계층
+### [3계층 아키텍처]
+- 데이터 액세스 계층 : 3계층 아키텍처는 백엔드의 DB나 레거시 시스템과 연동하는 인터페이스 역할
+- 서비스 계층 : 비즈니스 로직을 담는 역할
+- 프레젠테이션 계층 : 주로 웹 기반의 UI를 만들어내고 그 흐름을 관리하는 역할
+
+<img width="485" height="102" alt="image" src="https://github.com/user-attachments/assets/18ee4ca4-00e4-4d0c-9bcb-98aa4f485acb" />
+
+### [데이터 액세스 계층]
+- DAO 계층이라고도 불림. 왜? DAO패턴을 보편적으로 사용하기 때문.
+- DB이외에도 ERP, 레거시 시스템, 메인프레임 등에 접근하는 역할을 하기 때문에 EIS계층이라고도 한다.
+- 하지만 장기적인 데이터 저장을 목적으로 하는 DB이용이 주된 책임
+- 애플리케이션에서 담당하는 역할에 따라 분류한 3계층 구조와 달리, 데이터 액세스 계층 안에서 다시 세분화하는 경우는 추상화 수준에 따른 구분이기 때문에 수직적인 계층이라고 부르기도 한다.
+- 
+<img width="651" height="213" alt="image" src="https://github.com/user-attachments/assets/55080e43-8122-4912-bc4a-81c2ab0dc7b7" />
+
+- JdbcTemplate을 사용하는 데이터 액세스 계층의 특징
+  - JdbcTemplate이 추상화를 위한 계층으로 사용돼서 로우레벨의 기반 계층에 존재하는 JDBC와 드라이버, 스프링의 트랜잭션 추상화 서비스의 동기화 기능을 간접적으로 이용하게 만든다는 것. = JdbcTemplate은 우리가 직접 JDBC 코드를 다루지 않아도 되게 해주는 중간 추상화 계층이라서, 내부적으로는 JDBC와 DB 드라이버를 사용하면서 동시에 Spring의 트랜잭션 관리(@Transactional)와도 자동으로 연결되게 해준다는 뜻.
+  - 추상화 계층은 필요하다면 얼마든지 추가할 수 있다. 새로운 계층을 추가하면 개발자의 애플리케이션 코드에 큰 영향을 주기 때문에 매우 신중하게 결정해야 한다
+  - 한번 새로운 계층과 API를 만들어 적용하면 이를 최대한 유지할 수 있도록 하위 계층의 변화에 대응해야하는 책임도 갖게 됨.
+
+### [서비스 계층]
+- 잘 만들어진 스프링 애플리케이션의 서비스 계층 클래스는 이상적인 POJO로 작성된다. POJO로 만든다면 객체지향적인 설계 기법이 적용된 코드를 통해 비즈니스 로직의 핵심을 잘 담아내고, 이를 쉽게 테스트하고 유연하게 확장할 수 있다. 서비스 계층은 DAO계층을 호출하고 이를 활용해서 만들어진다.
+- 서비츠 계층은 특별한 경우가 아니라면 추상화 수직 계층구조를 가질 필요가 없다. 왜? 단순히 POJO 레벨에서 비즈니스 로직을 모델링하다가 상속구조를 만들 순 있을지 몰라도 기술 API를 직접 다루는 코드가 아니기 때문에 기술에 일괄된 방식으로 접근하게 하거나 편하게 사용하게 해주는 추상화는 필요 없기 때문이다.
+
+<img width="685" height="217" alt="image" src="https://github.com/user-attachments/assets/240a9e53-9ce2-428b-96ea-777693ec108b" />
+
+- 기반 서비스 계층이 서비스 계층의 오브젝트를 호출하는 경우를 잘 살펴봐야하는데, 일반적으로는 서비스 계층이 필요에 따라 기반 서비스 계층의 API를 호출해서 가져다 쓴다.
+- 하지만 반대로 서비스 계층의 코드를 기반 서비스 계층에서 실행시키는 경우가 있다. 이경우는 스케줄링이 대표적인 경우이다.
+- 미리 정해진 시간에 특정 서비스 계층의 로직이 동작하게 만다는 백그라운드 서비스가 필요하다면 그때는 서비스 계층에서 서비스 계층의 오브젝트를 이용하게 할 수도 있다.
+- 이상적인 서비스 계층은 백엔드 시스템과 연결되는 데이터 액세스 계층이 바귀고, 클라이언트와 연결되는 프레젠테이션 계층이 모두 바뀌어도 그대로 유지될 수 있어야 한다.
+- 엔터프라이즈 애플리케이션에서 가장 중요한 자산은 도메인의 핵심 비즈니스 로직이 들어 있는 서비스 계층이어야 한다.
+
+### [프레젠테이션 계층]
+= 프레젠테이션 계층은 가장 복잡한 계층
+- 프레젠테이션 계층은 매우 다양한 기술과 프레임워크의 조합을 가질 수 있다 -> 웹과 프레젠테이션 기술은 끊임없이 발전하ㅗㄱ 진보하고 새로운 모델이 등장하기 때문.
+엔터프라이즈 애플리케이션의 프레젠테이션 계층은 클라이언트의 종류과 상관 없이 HTTP 프로토콜을 사용하는 서블릿이 바탕이 된다.
+대부분의 엔터프라이드 애플리케이션을 사용하는 클라이언트들은 HTTP 프로토콜을 선호한다. 따라서 이런 클라이언트와 연결돼서 동작하는 프레젠테이션 계층은 자바에서 HTTP 프로토콜을 처리하는 가장 기본엔진이 서블릿 기술을 바탕으로 한다.
+- 초기 클라이언트 모델은 단순이 사람이 볼 수 있도록 그려주고 입력받은 값을 전달하는 데에 그쳤고, 화면을 어떻게 그릴지에 대한 로직 등이 모두 서버에서 처리됐다.
+- 최근에는 많은 프레젠테이션 로직이 클라이언트로 이동하고 있다. RIA라고 불리는 기술이나 SOFEA아키텍쳐가 대표적인 예이다.
+
+<img width="482" height="257" alt="image" src="https://github.com/user-attachments/assets/359c6c19-9443-418b-afe4-059fa6896d19" />
+
+<img width="678" height="526" alt="image" src="https://github.com/user-attachments/assets/74d5c721-9944-405a-8dd4-d19c1590a65a" />
+
+
+<img width="522" height="344" alt="image" src="https://github.com/user-attachments/assets/b80f57e4-ae54-4369-a580-8cf8c458b90d" />
+
+<img width="669" height="403" alt="image" src="https://github.com/user-attachments/assets/62ad8cee-c6d5-450a-b99a-68bd4fe6114b" />
