--- a/8주차/김윤경.md
+++ b/8주차/김윤경.md
@@ -67,3 +67,9 @@
 <img width="522" height="344" alt="image" src="https://github.com/user-attachments/assets/b80f57e4-ae54-4369-a580-8cf8c458b90d" />
 
 <img width="669" height="403" alt="image" src="https://github.com/user-attachments/assets/62ad8cee-c6d5-450a-b99a-68bd4fe6114b" />
+
+
+
+### 계층형 아키텍처 설계의 원칙
+- 각 계층은 응집도가 높으면서 다른 계층과는 낮은 결합도를 유지할 수 있어야 한다.
+  - ex) 데이터 액세스 계층은 데이터 액세스에 관한 모든 것을 스스로 처리해야한다. 비즈니스 로직을 담거나 웹 파라미터를 파싱하는 코드나, 결과를 화면에 어떻게 보이게 할지 결정하는 코드가 들어간다면 응집도가 낮아진다. 
