--- a/8주차/김채우/김채우.md
+++ b/8주차/김채우/김채우.md
@@ -361,3 +361,71 @@
       - 밖으로 내보낼 때는 내용을 복사해서 넘겨줘야 함 
       - DTO 사용하는 것 
 - ![img_16.png](img_16.png)
+- 도메인 계층 오브젝트는 싱긂톤인 다른 계층과 달리 짧은 시간 존재했다가 사라지는 것을 반복 
+  - 각 사용자의 요청 별로 독립적으로 도메인 계층을 이루는 오브젝트들이 생성됐다가 해당 요청을 처리하고 나면 버려짐
+  - 생명주기가 짧은 편 
+  - 도메인 오브젝트는 사용자별 요청에 대해 독립적인 상태를 유지하고 있어야 하기 때문 
+  - 상태 정보를 담고 있기 때문에 여러 스레드가 공유하는 싱글톤이 될 수 없음 
+  - 스프링이 아닌 다른 요소에 의해 만들어지는 경우도 많기 때문에 빈으로 등록도 할 수 없음 
+  - 따라서 특별한 방법으로 DI를 해 줘야만 다른 3계층의 빈들과 협력하여 업무 처리 가능 
+- 복잡하고 변경이 잦은 도메인을 가질 때 이러한 방식을 사용
+  - 복잡한 도메인의 구조와 로직을 최대한 도메인 계층의 오브젝트에 반영 
+  - 도메인 모델과 설계에 변경이 발생했을 때 도메인 계층의 오브젝트도 빠르게 대응해 변경해주기 위함 
+- 도메인 계층은 응집도가 높아 단위 테스트를 작성하기에 편리 
+- 도메인 계층을 이용하는 방식을 사용할 때는 오브젝트 중심 아키텍처의 기본 두 가지 방법을 경험해보고 오브젝트 중심의 갭잘 방식에 익숙해진 뒤 접근하는게 좋음 
+
+## DTO와 리포트 쿼리 
+- 오브젝트 중심 아키텍처라고 해서 모든 정보를 항상 도멩니 오브젝트에 담고 다녀야 하는 것은 아님 
+- 도메인 계층을 벗어난 정보를 DTO에 담아 사용하기도 함 
+### 리포트 쿼리
+- DB 쿼리의 실행 결과를 담는 경우
+- 리포트를 출력하기 위해 생성하는 쿼리라는 의미 
+- 종합 분석 리포트처럼 여러 테이블에 걸쳐 존재하는 자료를 분석하고 그에 따른 분석/통계 결과를 생성하는 쿼리라는 의미 
+- 여러가지를 조합해 만들어지기 때문에 적절한 도메인 오브젝트를 찾을 수 없음 
+- 따라서 DTO를 사용하거나 키와 값 쌍을 갖는 맵을 사용 
+
+# 스프링 애플리케이션을 위한 아키텍처 설계
+## 계층형 아키텍처
+- 3계층 구조는 스프링을 사용하는 엔터프라이즈 애플리케이션에서 가장 많이 사용되는 구조 
+- 3계층은 논리적이고 개념적인 부분이지 오브젝트 단위로 끊어져 구분되는 것은 아님 
+  - 비즈니스 로직이 단순하여 서비스 계층을 도입할 필요도 없다면 서비스 계층과 데이터 엑세스 계층을 통합할 수도 있음 
+- 프레젠테이션 계층에 서비스 계층을 통합하는 방법도 가능 
+  - DAO는 순수한 DB 인터페이스 역할을 하는 데이터 엑세스 기능만 갖게 하고 조건에 따른 간단한 로직의 적용은 프레젠테이션 계층의 컨트롤러에 넣는 것 
+    - 스프링에서 권장되는 방식은 아님 
+    - 스프링 AOP를 이용해 트랜잭션의 경계를 설정하기 애매하기 때문 
+## 정보 전송 아키텍처 
+- 스프링에 가장 잘 맞는 것은 오브젝트 중심 아키텍처의 도메인 오브젝트 방식 
+- DAO는 기술이 어떤 것이든 상관없이 서비스 계층에서 요청을 받거나 결과를 돌려줄 때 오브젝트를 이용해 작성 
+- 서비스 계층의 비즈니스 로직 또한 도메인 오브젝트를 이용해 작성 
+- 도메인 오브젝트를 사용해 애플리케이션의 정보를 일관된 형태로 유지하는게 스프링에 가장 잘 맞는 방식 
+- 레거시 시스템을 스프링으로 전환하는 경우 데이터 중심의 아키텍처를 사용해도 무방 
+  - 3계층의 기본 구조로 잘 분리할 수만 있다면 DB 중심의 접근 방식을 사용해 기존에 만들어 사용했던 SQL을 재사용 
+  - 전환 작업과 검증이 끝난 후 단계적으로 로직을 DB에서 애플리케이션으로 가져오고 오브젝트 중심으로 전환하는 시도를 하면 됨 
+## 상태 관리와 빈 스코프
+- 앤터프라이즈 애플리케이션은 동시에 수많은 사용자의 요청을 처리하기 위해 매번 간단한 요청을 받아 그 결과를 돌려주는 방식으로 동작 
+  - 따라서 서버의 자원이 특정 사용자에게 일정하게 할당되지 않음 
+  - 이러한 이유로 서버 기반의 애플리케이션은 지속적으로 유지되는 상태를 갖지 않는다는 특징이 있음 
+- 하지만 장시간 진행되는 작업 정보는 유지되어야 함 
+  - URL, 파라미터, 쿠키 등을 이용해 상태 정보 또는 서버에 저장된 상태정보에 키 값 등을 전달해야 함 
+  - 클라이언트와 서버 사이에 많은 양의 정보를 계속해서 주고받을 수는 없기 때문에 중요한 상태 정보는 파일 시스템, DB 등에 저장되기도 함 
+- 상태를 저장, 유지하는데 어떤 방식을 사용할지 결정하는 것은 매우 중요
+  - 스프링은 기본적으로 상태가 유지되지 않는 빈과 오브젝트를 사용하는 것을 권장 
+  - 웹 생리에 맞고 서버를 여러 대로 확장하는 것에 유리하기 때문 
+## 서드파티 프레임워크, 라이브러리 적용
+- 스프링은 거의 대부분의 자바 표준 기술과 함께 사용 가능 
+- 스프링이 지원하는 기술이란 무슨 의미일까?
+### 1. 해당 기술을 스프링의 DI 패턴을 따라 사용 가능
+- 프레임워크나 라이브러리의 핵심 클래스를 빈으로 등록할 수 있게 지원해 주는 것 
+- 프레임워크의 핵심 오브젝트를 빈의 형태로 등록해 둘 수 있다며 프로퍼티를 이용해 세부 설정을 조정할 수도 있고 DI를 통해 다른 오브젝트에서 손쉽게 사용도 가능 
+- 스프링이 제공하는 추상화 서비스를 통해 다른 리소스에 투명하게 접근 가능 
+- 스프링에서는 Hibernate의 SessionFactory를 스프링이 제공하는 빈을 등록하는 것만으로 간단히 생성하게 해주는 LocalSessionFactoryBean이라는 클래스 제공 
+### 2. 스프링의 서비스 추상화 적용
+- 비슷한 기능을 제공하는 기술에 대한 일관된 접근 방식을 정의
+- 서드파티 프레임워크를 적용 가능하고 필요에 따라 호한 가능한 기술로 손쉽게 교체 가능 
+- 일관된 방법으로 코드를 작성하게 해 준다는 것은 큰 의미를 가짐 
+### 3. 스프링이 지지하는 프로그래밍 모델 적용
+- 대표적인 예는 스프링의 데이터 엑세스 기술에 대한 일관된 예외 적용 
+- 데이터 엑세스 기술의 종류에 상관 없이 일관된 예외 계층 구조를 따라 예외가 던져짐 
+### 4. 탬플릿/콜백 지원
+- JDBC 등을 비롯한 20여가지 기술을 지원하는 탬플릿/콜백 제공
+- 해당 기능들을 간편하게 사용 가능 
