--- a/8주차/김윤경.md
+++ b/8주차/김윤경.md
@@ -72,4 +72,88 @@
 
 ### 계층형 아키텍처 설계의 원칙
 - 각 계층은 응집도가 높으면서 다른 계층과는 낮은 결합도를 유지할 수 있어야 한다.
-  - ex) 데이터 액세스 계층은 데이터 액세스에 관한 모든 것을 스스로 처리해야한다. 비즈니스 로직을 담거나 웹 파라미터를 파싱하는 코드나, 결과를 화면에 어떻게 보이게 할지 결정하는 코드가 들어간다면 응집도가 낮아진다. 
+  - ex) 데이터 액세스 계층은 데이터 액세스에 관한 모든 것을 스스로 처리해야한다. 비즈니스 로직을 담거나 웹 파라미터를 파싱하는 코드나, 결과를 화면에 어떻게 보이게 할지 결정하는 코드가 들어간다면 응집도가 낮아진다.
+ 
+<img width="516" height="48" alt="image" src="https://github.com/user-attachments/assets/808a7c5e-3ef8-4942-a283-d21f29d2163b" />
+
+- findUserByName() 메소드의 문제는 데이터 액세스 계층의 기술과 그 역할을 다르 계층에 노출한다는 점. 결과를 JDBC의 ResultSet오브젝트로 돌려주면 이를 사용하는 서비스 계층의 코드는 ResultSet이라는 데이터 액세스 계층에서 만들어진 오브젝트를 직접 다뤄야하만 한다.
+- SQLexception이라는 JDBC 기술 종속적인 예외를 체크예외로 던져버리면 이를 사용하는 서비스 계층에서는 SQLException을 해석해서 예외상황을 분석하고 이를 처리하는 코드를 만들어야 한다. 특정 데이터 액세스 계층의 구현에 종속되는 강한 결하비 만들어진다.
+- 계층 간에 강한 결합이 생기면 유연성이 떨어지기 때문에 각 계층의 내부 구현이 변화되면 다른 계층의 코드도 함께 수정해줘야 한다.
+- 코드의 중복이 일어날 가능성이 높고 전체 코드를 이해하기 힘들어진다
+
+<img width="548" height="53" alt="image" src="https://github.com/user-attachments/assets/66033be8-9a41-4861-a935-6fe41cc5a188" />
+
+- User는 사용자 정보를 담고 있는 단순한 오브젝트이다. 따라서 특정 계층의 기술이나 구현에 종속되지 않는 단순한 오브젝트의 형태로 전달해야한다.
+- 데이터 액세스 예외와 같이 특별한 경우에만 전달될 가능성이 있는 것은 스프링의 DataAccessException처럼 런타임 예외로 만들어야 한다.
+- [인터페이스]의 역할 : 어떤 경우에라도 계층 사이의 낮은 결합도를 깨뜨리지 않도록 설계해야 한다. 계층 사이의 호출은 인터페이스를 통해 이뤄져야 한다. 인터페이스를 하나 더 만드는 것이 번거롭다고 그냥 클래스를 이용해서는 안된다. 인터페이스를 사용하게 한다는 건 각 계층의 경계를 넘어서 들어오는 요청을 명확히 정의하겠다는 의미이다.
+
+
+## 9.3.2 애플리케이션 정보 아키텍처
+
+### 데이터 중심 아키텍처
+- 애플리케이션에 흘러다니는 정보를 단순히 값이나, 값을 담기 위한 목적의 오브젝트 형태로 취급하는 구조.
+- DB나 백엔드 시스템에서 가져온 정보를 값으로 다루고, 그 값을 취급하는 코드를 만들어 로직을 구현하고, 값을 그대로 프레젠테이션 계층의 뷰와 연결해주는 것
+- 비즈니스 로직이 DB내부의 저장프로시저나 SQL에 담겨 있는 경우가 많음
+
+[DB/SQL중심의 로직 구현 방식]
+
+- 데이터 중심 구조의 특징은 하나의 업무 트랜잭션에 모든 계층의 코드가 종속되는 경향이 있다는 것.
+- 사용자으 이름으로 사용자 정보를 검색해서 일치하는 사용자의 아이디, 비밀번호, 이름, 가입일자만 보여주는 작업이 있다고 생각해보면, 이것이 하나의 업무 단위가 되면 모든 계층의 코드가 이 기준에 맞춰서 만들어진다. 사용자 조회라는 단위 업무를 위해서만 존재하는 각 계층의 코드가 만들어진다는 뜻.
+- 검색조건은 SQL로 만들어진다. 사용자 정보를 웹 페이지에 나타낼 때 가입일자 중에서 연도만 보여줘야 한다면, 가입일자 필드에서 연도를 추출하는 것은 SQL의 날짜처리 펑션을 이용해야 한다. 그래야 SQL 결과를 그대로 웹 페이지의 정보 필드에 1:1로 매핑해서 넣어줄 수 있기 때문이다. 결국 SQL은 이미 화면에서 어떤 식으로 출력이 될지 알고 있는 셈이다.
+- SQL의 결과는 컬럼 이름을 키로 갖는 맵에 저장되거나 조회 페이지에 필요한 네 가지 정보를 담을 수 있는 단순한 오브젝트를 저장해서 전달된다. 프레젠테이션 계층의 JSP뷰는 DAO의 SQL에서 정확히 어떤 필드 값을 리턴할지, 어떤 포맷으로 전달할지 알고 있다. SQL의 SELECT절에 나오는 컬럼 이름을 그대로 사용해서 전달된 맵이나 결과를 저장하는 오브젝트에서 값을 가져와 화면에 출력한다. 만약 새로운 필드가 추가되거나 DB 테이블의 컬럼 이름이 변경됐다면, 그에 따라서 맵이나 오브젝트에 저장된 엔트리 또는 프로퍼티 이름이 바뀌거나 추가될 것이고 그에 맞게 뷰의 내용도 변경된다.
+
+<img width="803" height="267" alt="image" src="https://github.com/user-attachments/assets/9f35e480-6108-48ee-9703-d399340e2fa3" />
+
+- 대부분의 코드는 대응되는 작업 단위에 1:1로 매핑된다. 여러 작업에서 반복되는 기능이 있다면 그에 대한 코드는 중복되기 쉽다. 보통 작업 단위, 즉 업무 트랜잭션 단위로 코드를 묶어서 만들지, 기능을 세분화해서 분리하고 재사용하지 않기 때문이다.
+- 하나의 업무 트랜잭션을 모두 담은 서비스 계층 코드와 해당 업무에 특화된 SQL을 담은 하나 또는 여러 개의 DAO메소드로 구성된다.
+- 서비스 계층이 프레젠테이션 계층에 전달하는 결과의 포맷은 보통 DAO의 SQL결과와 같고, 웹 페이지의 출력 내용과도 1:1로 대응된다.
+- 이런식의 방식은 개발하기 쉽다는 장점이 있지만, 자바 코드를 단지 DB와 웹 화면을 연결해주는 단순한 인터페이스 도구로 전락시킨디-라는 결함이 있다.
+- DB 중심의 업무 단위로 코드를 만들면 애플리케이션 내에서 플러다니는 정보는 항상 단순한 포맷의 데이터다. 이런 코드들은 항상 SQL과 그 결과에 종속되기 때문에 SQL 변화가 일어나면 같이 변경돼야 한다. 이런 경우 강한 결합을 만들게 된다.
+- 스프링을 사용하면 이런 데이터 중심의 코드를 만들 수 있지만, 이런 개발 방식은 변화에 매우 취약하다. 객체지향의 장점이 별로 활용되지 못하는데다 각 계층의 코드가 긴밀하게 연결되어 있기 때문이다.
+- 또한 로직을 DB와 SQL에 많이 담으면 담을수록 점점 확장성이 떨어진다. DB는 확장에 한계가 있을뿐 아니라 확장한다 하더라도 매우 큰 비용이 든다.
+
+## 거대한 서비스 계층 빙식
+- DB에는 부하가 걸리지 않도록 저장 프로시저의 사용을 자제하고 복잡한 SQL을 피하면서, 주요 로직은 서비스 계층의 코드에서 처리하도록 만들면 DB에 많은 로직을 두는 개발 방법의 단점을 피하면서 애플리케이션 코드의 비중을 높일 수 있다.
+
+- 비즈니스 로직이 복잡해지면 서비스 계층의 코드도 매우 복잡해지고 커진다. 업무 트랜잭션 단위로 서비스 계층의 메소드가 만들어질 가능성이 높은데, 그러다 보면 하나의 메소드가 매우 거대해지도 한다. 이를 여러 메소드로 분산시킨다면 메소드 크기는 상대적으로 줄겠지만 전체 클래스 코드의 양은 그대로이다.
+- 상대적으로 단순한 DAO로직을 사용하고, 비즈니스 로직의 대부분을 서비스 계층에 집중하는 이런 접근 방법은 결국 거대한 서비스 계층을 만들게 된다. 데이터의 분석, 처리와 함꼐 비즈니스 로직의 대부분이 서비스 계층 코드에 집중되기 때문이다. 서비스 계층의 코드는 여전히 업무 트랜잭션 단위로 집중돼서 만들어지기 때문에 DAO를 공유할 수 있는 것을 제외하면 코드의 중복도 적지 않게 발생한다.
+
+<img width="798" height="246" alt="image" src="https://github.com/user-attachments/assets/a87c316b-5ee0-4333-900b-ee07e01029ac" />
+
+- 윗 사진은 거대 서비스 계층 방식의 아키텍처를 나타낸 것이다. 데이터 액세스 계층이나 DB는 비즈니스 로직을 직접 담고 있지 않기 때문에 이전보다 훨씬 가벼워진다. 대신 DB가 돌려주는 데이터를 가지고 비즈니스 로직을 구현하는 서비스 계층이 매우 두터워진다.
+
+- 거대 서비스 계층 방식의 장점 :
+  - 애플리케이션의 코드에 비즈니스 로직이 담겨 있기 때문에 자바 언어의 장점을 활용해 로직을 구현할 수 있고 테스트하기도 수월하다
+  - DAO가 다루는 SQL이 복잡하지 않고 프레젠테이션 계층의 뷰와 1:1로 매핑되지 않아도 되기 때문에 일부 DAO코드는 여러 비즈니스 로직에서 공유해서 사용할 수 있다.
+- 거대 서비스 계층 방식의 한계 : 
+  - 데이터 액세스 계층의 SQL은 서비스 계층의 비즈니스 로직의 필요에 따라 만들어지기 쉽다. 그래서 계층 간의 결합도가 여전히 크다 서비스 계층의 메소드는 크기가 큰 업무 트랜잭션 단위로 만들어지기 때문에 비슷한 기능의 코드가 여러 매소드에서 중복돼서 나타나기 쉽다. 그래서 계층 간의 결합도가 여전히 크다.
+  - DAO가 제공해주는 값의 포맷에 따라 이를 취급하는 방법이 달라지기 때문에 자주 사용되는 세부 로직을 추출해서 공통 기능으로 뽑아내는 일도 불가능하진 않지만 일반화하기는 힘들다.
+
+- 사용자 정부를 간단히 조작해주는 공통적인 기능이 있다고 가정해보면 
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
