--- a/8주차/김윤경.md
+++ b/8주차/김윤경.md
@@ -94,6 +94,7 @@
 - 애플리케이션에 흘러다니는 정보를 단순히 값이나, 값을 담기 위한 목적의 오브젝트 형태로 취급하는 구조.
 - DB나 백엔드 시스템에서 가져온 정보를 값으로 다루고, 그 값을 취급하는 코드를 만들어 로직을 구현하고, 값을 그대로 프레젠테이션 계층의 뷰와 연결해주는 것
 - 비즈니스 로직이 DB내부의 저장프로시저나 SQL에 담겨 있는 경우가 많음
+- 하지만 계층사이의 결합도가 높은 편이고 응집도는 떨어짐. + 화면을 중심으로 하는 업무 트랜잭션 단위로 코드가 모이기 때문에 처음에는 개발하기 편하지만 중복이 많아지기 쉽고 장기적으로 코드를 관리하고 발전시키기 힘들다느 단점이 있다.
 
 [DB/SQL중심의 로직 구현 방식]
 
@@ -128,8 +129,63 @@
 - 거대 서비스 계층 방식의 한계 : 
   - 데이터 액세스 계층의 SQL은 서비스 계층의 비즈니스 로직의 필요에 따라 만들어지기 쉽다. 그래서 계층 간의 결합도가 여전히 크다 서비스 계층의 메소드는 크기가 큰 업무 트랜잭션 단위로 만들어지기 때문에 비슷한 기능의 코드가 여러 매소드에서 중복돼서 나타나기 쉽다. 그래서 계층 간의 결합도가 여전히 크다.
   - DAO가 제공해주는 값의 포맷에 따라 이를 취급하는 방법이 달라지기 때문에 자주 사용되는 세부 로직을 추출해서 공통 기능으로 뽑아내는 일도 불가능하진 않지만 일반화하기는 힘들다.
+ 
 
-- 사용자 정부를 간단히 조작해주는 공통적인 기능이 있다고 가정해보면 
+## 9.3.3 오브젝트 중심 아키텍처
+- 오브젝트 중심 아키텍처가 데이터 중심 아키텍처와 다른 가장 큰 특징은 도메인 모델을 반영하는 오브젝트 구조를 만들어두고 그것을 각 계층 사이에서 정보를 전송하는 데 사용한다는 것.
+- 그래서 오브젝트 중심 아키텍처는 객체지향 분석과 모델링의 결과로 나오는 도메인 모델을 오브젝트 모델로 활용한다.
+- 대개 도메인 모델은 DB의 엔티티 설계에도 반영되기 때문에 관계형 DB의 엔티티 구조와도 유사한 형태일 가능성이 높다.
+
+
+### 데이터와 오브젝트
+
+<img width="773" height="296" alt="image" src="https://github.com/user-attachments/assets/a89f3f03-2fb3-4fa0-a808-caca8674085a" />
+
+- DAO에서는 JDBC로 SQL을 실행하고 받은 결과를 위 사진과 같이 담아서 서비스 계층으로 넘겨준다.
+- 서비스 계층에 전달되는 것은 List<Map<String, Object>> 타입이다.
+- 이 타입만 봐서는 안에 담긴 내용이 어떤것인지 알 수 없기 때문에 이 결고를 사용하는 서비스 계층이나 프레젠테이션 계층의 코드에서는 DAO 메소드에서 두 개의 테이블을 조인해서 다섯가지 필드의 값을 가져오고, 필드 이름을 키로 갖는 맵에 값을 저장했음을 알아햐 사용할 수 있다.
+- 만약 DAO에서 SQL을 변경하거나 필드 개수, 순서, 이름 등을 바꾼다면 서비스 계층과 프레젠테이션 계층의 코드도 같이 변경돼야 한다.
+- 반면에 오브젝트 방식에서 애플리케이션에서 사용되는 정보가 도메인 모델의구조를 반영해서 만들어진 오브젝트 안에 담긴다.
+- 도메인 모델은 애플리케이션 전 계층에서 동일한 의미를 갖는다.
+- SQL이나 웹 페이지의 출력 포맷, 입력 폼 등에 종속되지 않는 일관된 형식의 애플리케이션의 정보를 다룰 수 있게 된다. 
+
+<img width="856" height="584" alt="image" src="https://github.com/user-attachments/assets/cb4c6762-4dc7-4a51-bd1b-8abb8164d9d8" />
+
+- 이 구조는 단순히 특정 SQL에 대응되는 맵과 배열, 매번 달라지는 SQL결과를 담기 위해 만든 오브젝트와는 달리, 애플리케이션 어디에서도 사용될 수 있는 일관된 형식의 도메인 정보를 담고 있다.
+
+[데이터 중심 방식]에서는 Category와 그에 대응되는 Product를 찾아 SQL을 이용해 조인한 다음 하나의 맵에 뭉뜽그려서 가져왔다면
+<br> [오브젝트 중심 방식]에서는 테이블의 정보와 그 관계를 유지한 채로 정확한 개수의 Category 오브젝트와 그에 대응되는 Product 오브젝트로 만들어 사용한다.
+<br> 따라서 테이블에 Category가 하나이고 그에 대응되는 Product열이 5개라면, 오브젝트도 하나의 Category 오브젝트와 이에 연결된 5개의 Product가 만들어질 것이다.
+<br> 이 두가지 오브젝트는 레퍼런스 변수를 통해 서로 연결되어 있기 때문에 메소드 파라미터나 리턴 값으로 전달 할 때 Category 오브젝트 하나를 전달하더라도 그에 연결된 Product 5개가 함께 전달된다. 반대로 Product의 컬렉션을 전달해도 된다. 
+
+### 도메인 오브젝트를 사용하는 코드
+
+<img width="804" height="283" alt="image" src="https://github.com/user-attachments/assets/109cfcce-731a-4f50-9692-617ac4cac9f4" />
+- 입력값 : Category cate
+- 출력값 : int (총가격)
+- cate.getProducts()
+<br> DB에서 직접 Product를 조회하지 않는다 + Category 객체가 이미 Product 목록을 알고 있다.
+
+### 도메인 오브젝트 사용의 문제점
+- 일관된 의미를 가지고 유연하며 애플리케이션 전반에 공유 가능한 도메인 모델을 따르는 오브젝트로 정보를 다루면 많은 장점이 있다. 코드는 이해하기 쉽고 로직을 작성하기도 수월하다.
+<br> 프레젠테이션 영역에서도 이미 정의된 도메인 오브젝트 구조만 알고 있다면 아직 DAO가 작성되지 않아도 뷰를 미리 만들 수도 있다. 코드의 재사용성은 높아지고 DAO는 더 작고 효율적으로 만들수 있다.
+- 하지만 성능면에서는 한계가 있다. DAO는 비즈니스 로직의 사용방식을 알지 못하기때문에 도메인 오브젝트의 모든 피드 값을 다 채워서 전달하는 경우가 대부분이다.
+<br> 그런데 하나의 오브젝트에 담긴 필드의 개수가 많아지다보면 그중에는 드물게 사용되는 필드도 있을 수 있다.
+<br> 어떤 비즈니스 로직에서 필요한 정보가 몇 개의 필드뿐이라면 DAO에서 도메인 오브젝트의 모든 필드 정보를 채워서 전달하는 것은 낭비일 수도 있다. 비즈니스 로직에 따라서 필요한 정보가 달라질 수 있기 대문에 발생하는 문제다.
+<br> 또한 내가 필요한 오브젝트만 쏙 빼올 수 없고, 다른 오브젝트까지 다 조회해서 오브젝트로 만들어서 가져와야한다.
+- DAO와 비즈니스 로직 코드의 결합도가 높아지는 문제가 발생할 수도 있는데, 프레젠테이션 계층에서도 마찬가지로 이러한 문제가 생긴다. Product 오브젝트를 전달받아서 Product 내의 필드 값만 사용할 수도 있고 연결된 Category의 정보까지 출력할 수도 있기 때문이다.
+  - [지연된 로딩]기법을 이용하면 일단 최소한의 오브젝트 정보만 읽어두고 관계하고 있는 오브젝트가 필요한 경우에만 다이내믹하게 DB에서 다시 읽어올 수 있다.
+  - 필드가 너무 많은 테이블이 있다면 그중에서 자주 사용되는 것을 골라내서 별도의 오브젝트로 정의해두고 필요에 따라 구분해서 사용하게 할 수 있다.
+  - [오브젝트/RDB 매핑]기술도 하나의 방법이다. 사용하기 쉽고 직관적이며 코드의 양도 대폭 줄기 때문이다.
+  <br>
+  <img width="438" height="317" alt="image" src="https://github.com/user-attachments/assets/ec69be7c-adb8-4584-a6af-8f6c18a3141e" />
+  <br>
+  <img width="378" height="294" alt="image" src="https://github.com/user-attachments/assets/845bc3f6-64d7-4fb4-810b-b8dfe1384515" />
+
+
+
+
+
 
   
 
