--- a/8주차/김윤경.md
+++ b/8주차/김윤경.md
@@ -183,17 +183,39 @@
   <img width="378" height="294" alt="image" src="https://github.com/user-attachments/assets/845bc3f6-64d7-4fb4-810b-b8dfe1384515" />
 
 
+  ### 빈약한 도메인 오브젝트 방식
+  - 빈약한 오브젝트 : 도메인 오브젝트에 정보만 담겨 있고 정보를 활용하는 아무런 기능도 갖고 있지 않다면 이는 온전한 오브젝트라고 보기 힘들다. 이런 오브젝트들을 빈약한 오브젝트라고 부른다.
+    
+<img width="785" height="333" alt="image" src="https://github.com/user-attachments/assets/74af378b-f9b2-42ab-b1c9-8785ade367d3" />
+- 윗 사진을 설명해보자면, 도메인 오브젝트는 존재하지만, 비즈니스 로직은 거의 다 서비스 계층에 있는 구조이다.
+<br> 그리고 이 모든 계층에서 공통으로 사용하는 것이 도메인 오브젝트 이다. 단순정보만 담고있고, 비즈니스 판단 로직은 없다.
+
+<img width="346" height="245" alt="image" src="https://github.com/user-attachments/assets/79663034-3d6c-4218-9e5b-94d21eecf044" />
+
+- 프레젠테이션 계층 (controller/view)
+<img width="348" height="247" alt="image" src="https://github.com/user-attachments/assets/cbcd9313-f776-4ef1-b199-04e7368735d9" />
+
+- 서비스 계층 : 여전히 핵심 비즈니스 로직은 서비스 계층에 모두 담겨 있다
+<img width="517" height="226" alt="image" src="https://github.com/user-attachments/assets/46fbc8c3-ff09-4184-82ca-addd23be596e" />
+<img width="517" height="226" alt="image" src="https://github.com/user-attachments/assets/ce8ffa08-ea1d-4ea6-aeac-9eacc6ce5e28" />
+<br> -> 판단, 규칙, 정책 모두 서비스 계층에 있다.
+
+- 데이터 액세스 계층 (DAO/ Respository) : SQL을 직접 쓰면 도메인 오브젝트로 변환해야 하고 ORM을 쓰면 매핑만으로 가능하다
+  
+<img width="425" height="72" alt="image" src="https://github.com/user-attachments/assets/9e861330-8af5-4d7a-b809-d5f83de6edfb" />
+<br> DB에서 id에 해당하는 DietPlan 데이터를 찾아서 DietPlan 객체로 만들어서 plan 변수에 담는다
+- SQL을 직접 쓰면 도메인 오브젝트로 변환해야 하고 ORM을 쓰면 매핑만으로 가능하다
+
+
+### 풍성한 도메인 오브젝트 방식
+<img width="786" height="383" alt="image" src="https://github.com/user-attachments/assets/4e3ad57d-d524-498f-a982-a016c0d0c590" />
+
+
 
 
 
 
   
-
-
-
-
-
-
 
 
 
