--- a/8주차/김윤경.md
+++ b/8주차/김윤경.md
@@ -208,7 +208,118 @@
 
 
 ### 풍성한 도메인 오브젝트 방식
+
 <img width="786" height="383" alt="image" src="https://github.com/user-attachments/assets/4e3ad57d-d524-498f-a982-a016c0d0c590" />
+
+- 풍성한 도메인 오브젝트 또는 영리한 도메인 오브젝트 방식은 빈약한 도메인 오브젝트의 단점을 극복하고 도메인 오브젝트이 객체지향적인 특징을 잘 사용할 수 있도록 개선한 것이다.
+- 도메인 오브젝트 안에 로직을 담아두면 이 로직을 서비스 계층의 메소드에 따로 만드는 경우보다 응집도가 높다. -> 데이터와 그것을 사용하는 기능이 한곳에 모여있기 때문이다.
+
+<img width="650" height="345" alt="image" src="https://github.com/user-attachments/assets/26305031-deed-4ffb-879a-efd43014c746" />
+- 여러 개의 도메인 오브젝트에 대한 로직을 사용해야 하는 복잡한 코드라면 각 비즈니스 로직을 담고 있는 서비스 오브젝트를 DI해서 로직을 담은 메소드를 호출해야 한다. 이미 정보를 담고 있는 오브젝트가 있지만, 그 정보를 다루는 메소드는 별개의 서비스 오브젝트에 부린되어 있기 때문이다.
+
+<img width="653" height="219" alt="image" src="https://github.com/user-attachments/assets/f4cc27b5-8acb-4ee9-9b8c-f1fb300a1620" />
+
+- Category에 대한 계산 로직을 Category오브젝트 안에 직접 넣어뒀다면 이런 번거로운 작업이 필요 없다.
+<br> 그냥 Category 오브젝트에게 직접 필요한 계산 작업을 요청하면 되는 것이다. CategoryService를 DI할 필요도 없다. 비슷한 코드가 여기저기 비즈니스 로직에 중복돼서 나타나지도 않는다.
+<br> 특정 도메인 오브젝트에 종속되는 비즈니스 로직은 서비스 계층의 오브젝트가 아니라 도메인 오브젝트 안에 넣으면 된다. InventoryService의 코드는 불필요한 DI 없이 간결하게 만들 수 있다.
+
+- 그렇다고 해서 서비스 계층 오브젝트가 아예 필요 없는건 아니다. 여전히 서비스계층은 필요하며 중요한 역할을 한다. <br> 도메인 오브젝트 안에 메소드로 들어가는 로직들은 대부분 해당 오브젝트나, 긴밀한 연관관계를 맺고 있는 관련 오브젝트의 정보와 기능만을 활용한다.
+<br> 도메인 오브젝트는 직접 데이터 액세스 계층이나 기반 계층 또는 다르 서비스 계층의 오브젝트에 접근할 수 없기 때문에 서비스 계층이 필요하기도 하다.
+- 왜 도메인 오브젝트는 DAO 오브젝트를 DI받을 수 없을까? 그것은 도메인 오브젝트는 스피링 컨테이너가 관리하는ㄴ 오브젝트, 즉 빈이 아니기 때문이다.
+  - 서비스 계층의 오브젝트나 데이터 액세스 계층의 오브젝트는 모두 스프링의 빈으로 등록되기 때문에 필요에 따라 서로 DI할 수 있다. DI받으려면 자신도 역시 스프링 컨테이너에서 관리되는 빈이어야 한다.
+  - 그런데 도메인 오브젝트는 스프링의 빈이 아니고, 도메인 오브젝트는 필요할때마다 새롭게 만들어진다.
+  - 따라서 스프링이 생성하거나 관리하는 오브젝트가 아니므로 DI를 받을 수 없다.
+ 
+  - 수식 계산이나 조건에 따른 데이터 변경 또는 자신이 가진 정보에 대한 분석같은 도메인 오브젝트 자신에 국한된 로직은 도메인 오브젝트 안에 추가할 수 있지만, 그 결과를 DB에 저장하거나 메일로 발송하거나 DB를 검색해서 원하는 정보를 가져와 활용하는 작업은 도메인 오브젝트에서 불가능한다.
+  <br> 그래서 DAO 기반 계층 오브젝트를 DI받아 사용할 수 있는 서비스 계층의 코드가 필요하다.
+- 풍성한 도메인 오브젝트 방식은 빈약한 도메인 오브젝트 방식보다 서비스 계층의 코드가 간결하다.
+- 비즈니스 로직 코드를 이해하기도 쉽다.
+
+### 도메인 '계층' 방식
+- 도메인 계층의 역할과 비중을 극대화하려다 보면 기존의 풍성한 도메인 오브젝트 방식으로는 만족할 수 없다.
+- 그래서 등장한 것이 바로 도메인 오브젝트가 기존 3계층과 같은 레벨로 격상되어 하나의 계층을 이루게 하는 도메인 계층 방식이다.
+- 도메인 오브젝트들이 하나의 독립적인 계층을 이뤄서 서비스 계층과 데이터 액세스 계층의 사이에 존재하는 것이다.
+- 도메인 오브젝트가 독립된 계층을 이뤘기 때문에 기존 방식과는 다르 두 가지 특징을 갖게 된다.
+  - 첫째는 도메인에 종속적인 비즈니스 로직의 처리는 서비스 계층이 아니라 도메인 계층의 오브젝트 안에서 진행된다는 점.
+  <br> 서비스 계층에서 사용자가 입력한 정보를 바탕으로 새로운 도메인 오브젝트를 만들었든 데이터 액세스 계층을 통해 도메인 오브젝트를 가져왔든 상관없이 도메인 오브젝트에게 비즈니스 로직의 처리를 요청할 수 있다. -> 일단 도메인 계층으로 들어가면 서비스 계층의 도움 없이도 비즈니스 로직의 대부분의 작업을 수행할 수 있다는 뜻.
+  - 두 번째 특징은 도메인 오브젝트가 기존 데이터 액세스 계층이나 기반 계층의 기느을 직접 활용할 수 있다는 것.
+    - 도메인 오브젝트는 스프링에 등록돼서 싱글톤으로 관리되는 빈이 아니기 때문에 다른 빈을 DI받을 수 없다고 했는데, 도메인 계층의 도메인 오브젝트들은 어떻게 다른 빈을 이용할 수 있을까? -> 이것또한 DI 방법을 사용한다. 스프링이 관리하지 않는 도메인 오브젝트에 DI를 적용하기 위해서는 AOP가 필요하다.
+    - 물론 스프링 AOP는 부가기능을 추가할 수 있는 위치가 메소드 호출 과정으로 한정되고 AOP의 적용 대상도 스프링의 빈 오브젝트뿐이다.
+      
+<img width="633" height="272" alt="image" src="https://github.com/user-attachments/assets/7d59f6fe-f8af-4aa7-a361-20019283934d" />
+
+- AspectJ AOP를 쓰면, 스프링이 관리하지 않는 “일반 객체”가 만들어지는 순간에도 AOP랑 DI를 적용할 수 있다는 말이다.
+- 스프링 AOP는 스프링 빈에만 적용되는데, AspectJ AOP는 객체가 생성되는 순간 (생성자 호출 시점) 도 조인 포인트(개입 지점) 로 쓸 수 있다. 그래서 스프링 빈이 아닌 객체에도 AOP 적용이 가능하다. 
+
+- 이 방법을 이용하면 도메인 오브젝트가 만들어질 때 스프링의 빈 오브젝트를 DI 받게 할 수 있다. 결국 도메인 오브젝트가 데이터 액세스 계층이나 기반 계층의 오브젝트를 이용하도록 만들 수 있다.
+
+[도메인 오브젝트를 독립적인 계층으로 만들려고 할 때 고려해야할 중요한 사항]
+- 모든 계층에서 도메인 오브젝트를 사용한다.
+  <br> 도메인 계층은 물론이고 서비스 계층이나 그 앞의 프레젠테이션 계층, 화면 출력을 위한 뷰에서도 직접 도메인 오브젝트를 전달받아 사용할 수 있게 해야한다.
+- 도메인 오브젝트는 도메인 계층을 벗어나지 못하게 하는 것
+  <br> 도메인 계층 밖응로 전달될 때는 별도로 준비된 정보 전달용 오브젝트에 도메인 오브젝트의 내용을 복사해서 넘겨줘야 한다.
+
+- 도메인 계층 방식
+
+<img width="648" height="355" alt="image" src="https://github.com/user-attachments/assets/b4b67e83-872a-453d-a736-3ab49f038a20" />
+
+-> 도메인 계층은 사용자 요청마다 잠깐 생성됐다가 사라지는 객체들이며, 복잡한 비즈니스 로직이 있을 때 가장 큰 장점을 발휘하지만, 단순한 앱에서는 오히려 과할 수 있다.
+
+### DTO와 리포트 쿼리
+- 도메인 계층 방식의 경우 도메인 계층을 벗어난 정보를 DTO라 불리는 특정 계층에 종속되지 않는 정보 전달의 목적을 가진 단순 오브젝트에 담아 사용하기도 한다.
+- [리포트 쿼리]라고 불리는 DB 쿼리의 실행 결과를 담는 경우. 리포트 쿼리는 리포트를 출력하기 위해 생성하는 쿼리. 리포트를 위해서라기보다는 종합분석 리포트처럼 여러 테이블에 걸쳐 존재하는 자료를 분석하고 그에 따른 분석/통계 결과를 생성하는 쿼리.
+- 이런 쿼리의 결과는 DB 테이블에 담긴 필드의 내용보다는 그 합께, 평균과 같은 계산 값이거나 아니면 여러 테이블의 필드를 다양한 방식으로 조합해서 만들어진다.
+
+
+## 9.3.4 스프링 애플리케이션을 위한 아키텍처 설계
+
+### 계층형 아키텍처
+- 3계층 구조는 기본이지만, 비즈니스 로직이 단순하면 2계층으로 통합해도 되고, 다만 서비스 계층을 프레젠테이션에 흡수하는 건 권장되지 않는다.
+- 프레젠테이션 계층은 MVC를 기반으로 세분화·확장될 수 있고, 최근에는 일부 프레젠테이션 로직이 클라이언트로 이동하는 SOFEA 구조가 빠르게 확산되고 있다.
+
+### 정보 전송 아키텍처
+- 스프링에서는 계층 간 정보 전달을 도메인 객체로 통일하는 ‘도메인 객체 중심 아키텍처’가 가장 잘 맞는다
+
+### 상태 관리와 빈 스코프
+- 웹 애플리케이션은 기본적으로 stateless가 유리하지만, 필요한 경우에만 상태를 저장하고 스프링의 빈 스코프를 이용해 안전하게 관리해야 한다.
+- ex)
+  - Controller / Service -> 싱글톤, stateless
+  - 회원가입·폼 작성 중 데이터 -> session / request 스코프 객체
+
+### 서드파티 프레임워크, 라이브러리 적용
+
+- [해당 기술을 스프링의 DI 패턴을 따라 사용할 수 있다]
+  - 서드파티 기술의 핵심 객체를 스프링 빈으로 등록
+  - 설정만으로 객체 생성·초기화 가능
+  - DI로 어디서든 사용 가능
+
+- [스프링의 서비스 추상화가 적용됐다]
+  - 트랜잭션, OXM, 메일, 메시징 등
+  - 기술별 API 차이를 숨기고 공통 인터페이스 제공
+  - 구현 기술을 바꿔도 코드 변경 최소화
+ 
+- [스프링이 지지하는 프로그래밍 모델을 적용했다]
+  - 데이터 액세스 예외를 일관된 예외 계층으로 변환
+  - DAO 코드가 특정 기술에 종속되지 않음
+  - 불필요한 try/catch 제거
+  - 서비스 계층이 깔끔해짐
+
+- [템플릿/콜백이 지원된다]
+  - JDBC, JMS, JCA 등 반복 코드 많은 기술
+  - 스프링 템플릿이: 리소스 열고 닫기, 예외 처리, 공통 흐름 담당, 개발자는 핵심 로직만 작성
+
+  
+
+
+
+
+
+
+
+
+
+
+
 
 
 
