--- a/9주차/김윤경.md
+++ b/9주차/김윤경.md
@@ -1,4 +1,5 @@
 # AOP
+- AOP : Aspect Oriented Programming, 여러 곳에 반복되는 공통 로직을 핵심 로직과 분리하는 방법
 - AOP는 IoC/DI, 서비스 추상화와 더불어 스프링의 3대 기술
 - AOP의 적용대상은 선언적 트랜잭션 기능
 
@@ -78,6 +79,47 @@
 - 따라서 userService라는 대표적인 빈 아이디는 UserServiceTx클래스로 정의된 빈에게 부여해준다. userServiceImpl클래스로 정의되는, 아이디가 userServiceImpl인 빈을 DI하게 만든다.
 
 ### 트랜잭션 분리에 따른 테스트 수정
+- 기존에는 UserService 클래스 타입의 빈을 @Autowired로 가져다가 사용했다. UserServic는 인터페이스로 바뀌었다.
+<br> 인터페이스라고 하더라도 @Autowired로 가져오는데는 아무런 문제가 없다.
+- 하지만 @Autowired는 기본적으로 타입이 일치하는 빈을 찾아주기 때문에 다른 문제가 발생하는데,
+<br> 수정한 스프링의 설정파일에는 UserService라는 인터페이스 타입을 가진 두 개의 빈이 존재하기 때문이다.
+- 같은 타입의 빈이 두 개라면 @Autowired를 적용한 경우 기본적으로 타입을 이용해 빈을 찾지만 타입으로 하나의 빈을 결정할 수 없는 경우네는 필드 이름이 리용해 빈을 찾는다
+
+<img width="361" height="67" alt="image" src="https://github.com/user-attachments/assets/f2486a02-2336-431f-97d3-b33efc4c4aef" />
+
+- 따라서 위와 같은 변수를 설정해두면 아이디가 userService인 빈이 주입될 것이다.
+
+- 그런데 UserServiceTest는 UserServiceImpl 클래스로 정의된 빈을 하나 더 가져와야 한다.
+- 일반적인 UserService 기능의 테스트에서는 UserService인터페이스르 통해 결과를 확인하는 것으로 충분하다.
+- 하지만 앞 장에서 만든 MailSender 목 오브젝트를 이용한 테스트에서는 테스트에서 직접 MailSender를 Di해줘야 할 필요가 있었다
+- MailSender를 DI 해줄 대상을 구체적으로 알고 있어야 하기 때문에 UserServiceImpl 클래스의 오브젝트를 가져올 필요가 있다.
+
+<img width="430" height="60" alt="image" src="https://github.com/user-attachments/assets/5ed7772d-178d-4f13-9a9b-be9de7039948" />
+
+- 목 오브젝트를 이용해 수동 DI를 적용하는 테스트라면 어떤 클래스의 오브젝트인지 분명하게 알 필요가 있다. 따라서 위의 사진과 같이 UserServiceImpl 클래싀 타입의 변수를 선언하고 <br> @Autowired를 지정해서 해당 클래스로 만들어진 빈을 주입받도록 한다. <br> 그래야만 MockMailSender를 설정해주기 위한 수정자 메소드에 접근할 수 있기 때문이다.
+
+<img width="819" height="248" alt="image" src="https://github.com/user-attachments/assets/8e2a629a-342d-42cc-86a5-a2384e9ae633" />
+
+- MailSender의 목 오브젝트를 설정해주는건 이제 UserService 인터페이스를 통해선 불가능하기 때문에 별도로 가져온 userServiceImpl빈에 해줘야 한다.
+
+- add() 테스트 메소드는, 변경하기 전과 동일하게 동작함이 보장되므로 테스트는 그대로 둔다.
+
+- upgradeAllOrNothing() 테스트는 테스트용 확장 클래스도 만들고 수동 DI도 적용하고 한 만큼, 바뀐 구조를 모두 반영하는 수정을 한다.
+
+<img width="936" height="619" alt="image" src="https://github.com/user-attachments/assets/8b0fb948-8a22-40d0-966f-cf7012bbf4cb" />
+
+- TestUserService 오브젝트를 UserServiceTx 오브젝트에 수동 DI시킨 후에 드랜잭션 기능가지 포함된 UserServiceTx 오브젝트에 수동 DI시킨 후에 트랜잭션 기능까지 포함된 UserServiceTx의 메소드를 호출하면서 테스트를 수행하도록 해야 한다.
+- 트랜잭션 테스트용으로 특별히 정의한 TestUserService 클래스는 UserServiceImpl 클래스를 상속하도록 바꿔주면 된다.
+
+### 트랜잭션 경계설정 코드 분리의 장점
+- 1. 비즈니스 로직을 담당하고 있는 UserServiceImpl의 코드를 작성할 때는 트랜잭션과 같은 기술적인 내용에는 전혀 신경 쓰지 않아도 된다.
+- 2. 비즈니스 로직에 대한 테스트를 손쉽게 만들어 낼 수 있다.
+ 
+## 6.2 고립된 단위 테스트 
+
+
+
+
 
 
 
